style(notebooks): aplicar black a todos los notebooks .ipynb del curso
Se aplicó el formateador black a todos los archivos .ipynb de contenido y soluciones en bloques 1, 2 y 3. Esto asegura consistencia de estilo, mejora la legibilidad y facilita la revisión de código en notebooks educativos. No se modificó la lógica ni el contenido pedagógico, solo el formato de celdas de código. Impacta notebooks de semanas 1-15 y soluciones de casos prácticos. Compatible con lineamientos de calidad y revisión automática.

--- a/contenido/bloque-1/semana-1/configuracion-fundamentos.ipynb
+++ b/contenido/bloque-1/semana-1/configuracion-fundamentos.ipynb
@@ -131,15 +131,15 @@
     "# ¿Cómo le decimos a Python que \"recuerde\" información sobre un jugador?\n",
     "\n",
     "# Pregúntate: ¿Qué información básica necesitas de cualquier futbolista?\n",
-    "jugador = \"Lionel Messi\"          # ¿Por qué usamos comillas para el nombre?\n",
-    "edad = 37                         # ¿Por qué NO usamos comillas para la edad?\n",
-    "goles = 10                        # ¿Qué tipo de número representa mejor los goles?\n",
-    "altura = 1.70                     # ¿Por qué necesitamos decimales para la altura?\n",
-    "es_activo = True                  # ¿Qué significa True y False en programación?\n",
+    "jugador = \"Lionel Messi\"  # ¿Por qué usamos comillas para el nombre?\n",
+    "edad = 37  # ¿Por qué NO usamos comillas para la edad?\n",
+    "goles = 10  # ¿Qué tipo de número representa mejor los goles?\n",
+    "altura = 1.70  # ¿Por qué necesitamos decimales para la altura?\n",
+    "es_activo = True  # ¿Qué significa True y False en programación?\n",
     "\n",
     "# ¡Veamos qué \"recordó\" la computadora!\n",
     "print(\"FICHA DEL JUGADOR\")\n",
-    "print(\"=\"*25)\n",
+    "print(\"=\" * 25)\n",
     "print(f\"Nombre: {jugador}\")\n",
     "print(f\"Edad: {edad} años\")\n",
     "print(f\"Goles esta temporada: {goles}\")\n",
@@ -149,7 +149,7 @@
     "print(\"\\nPregunta de reflexión:\")\n",
     "print(\"¿Notas cómo cada tipo de información se guarda de manera diferente?\")\n",
     "print(\"- Texto (nombres) va entre comillas\")\n",
-    "print(\"- Números enteros (edad, goles) van sin comillas\")  \n",
+    "print(\"- Números enteros (edad, goles) van sin comillas\")\n",
     "print(\"- Números decimales (altura) usan punto\")\n",
     "print(\"- Verdadero/Falso (estado) son True/False\")\n",
     "\n",
@@ -231,7 +231,7 @@
     "# ¿QUÉ CÁLCULOS DEPORTIVOS PUEDE HACER PYTHON?\n",
     "\n",
     "print(\"OPERACIONES BÁSICAS CON DATOS DEPORTIVOS\")\n",
-    "print(\"=\"*45)\n",
+    "print(\"=\" * 45)\n",
     "\n",
     "# ¿Cuántos goles más necesita para llegar a 15 esta temporada?\n",
     "goles_objetivo = 15\n",
@@ -249,13 +249,13 @@
     "\n",
     "# ¿Cuántos goles lleva en promedio por cada año de edad?\n",
     "# (Pregunta: ¿Por qué usamos // en lugar de / ?)\n",
-    "promedio_goles_por_edad = goles // edad  \n",
+    "promedio_goles_por_edad = goles // edad\n",
     "print(f\"Goles promedio por año de vida: {promedio_goles_por_edad}\")\n",
     "\n",
     "print(\"\\nEXPLORANDO OPERADORES:\")\n",
-    "print(\"=\"*30)\n",
+    "print(\"=\" * 30)\n",
     "print(\"+ (suma): para agregar valores\")\n",
-    "print(\"- (resta): para encontrar diferencias\")  \n",
+    "print(\"- (resta): para encontrar diferencias\")\n",
     "print(\"* (multiplicación): para convertir unidades\")\n",
     "print(\"// (división entera): para promedios sin decimales\")\n",
     "print(\"/ (división decimal): para cálculos precisos\")\n",
@@ -358,7 +358,7 @@
     "# ¿CÓMO COMPARA PYTHON COMO LO HARÍA UN ENTRENADOR?\n",
     "\n",
     "print(\"ANÁLISIS COMPARATIVO DE RENDIMIENTO\")\n",
-    "print(\"=\"*40)\n",
+    "print(\"=\" * 40)\n",
     "\n",
     "# Datos de comparación deportiva\n",
     "partidos_jugados = 25\n",
@@ -369,7 +369,7 @@
     "print(f\"¿Es un veterano (>30 años)?: {es_veterano}\")\n",
     "\n",
     "# ¿Está en forma goleadora? (más de 8 goles)\n",
-    "en_forma = goles > 8  \n",
+    "en_forma = goles > 8\n",
     "print(f\"¿Está en buena forma goleadora?: {en_forma}\")\n",
     "\n",
     "# ¿Es un jugador clave? (más de 20 partidos)\n",
@@ -385,7 +385,7 @@
     "print(f\"¿Es considerado goleador?: {es_goleador}\")\n",
     "\n",
     "print(\"\\nOPERADORES DE COMPARACIÓN:\")\n",
-    "print(\"=\"*30)\n",
+    "print(\"=\" * 30)\n",
     "print(\"> (mayor que): para superar límites\")\n",
     "print(\"< (menor que): para estar por debajo\")\n",
     "print(\">= (mayor o igual): para alcanzar mínimos\")\n",
@@ -400,9 +400,13 @@
     "\n",
     "# ¿Qué significa cada resultado?\n",
     "print(f\"\\nINTERPRETACIÓN:\")\n",
-    "print(f\"Veterano: {es_veterano} - {'Experiencia valiosa' if es_veterano else 'Jugador joven'}\")\n",
+    "print(\n",
+    "    f\"Veterano: {es_veterano} - {'Experiencia valiosa' if es_veterano else 'Jugador joven'}\"\n",
+    ")\n",
     "print(f\"En forma: {en_forma} - {'Buen momento' if en_forma else 'Puede mejorar'}\")\n",
-    "print(f\"Titular: {es_titular} - {'Jugador clave' if es_titular else 'Necesita más minutos'}\")"
+    "print(\n",
+    "    f\"Titular: {es_titular} - {'Jugador clave' if es_titular else 'Necesita más minutos'}\"\n",
+    ")"
    ]
   },
   {
@@ -475,7 +479,7 @@
     "# ¿CÓMO TOMA DECISIONES AUTOMÁTICAS NUESTRO \"ASISTENTE TÉCNICO\"?\n",
     "\n",
     "print(\"SISTEMA AUTOMÁTICO DE EVALUACIÓN DE JUGADORES\")\n",
-    "print(\"=\"*50)\n",
+    "print(\"=\" * 50)\n",
     "\n",
     "# ¿Debería este jugador ser convocado? Veamos qué decide Python...\n",
     "\n",
@@ -496,7 +500,7 @@
     "    convocable_por_goles = True\n",
     "elif goles >= 5:\n",
     "    print(\"Forma aceptable\")\n",
-    "    convocable_por_goles = True  \n",
+    "    convocable_por_goles = True\n",
     "else:\n",
     "    print(\"Necesita mejorar efectividad\")\n",
     "    convocable_por_goles = False\n",
@@ -522,7 +526,7 @@
     "print(f\"\\n{estado_decision} - DECISIÓN FINAL: {decision_final}\")\n",
     "\n",
     "print(\"\\nESTRUCTURA DE DECISIONES:\")\n",
-    "print(\"=\"*35)\n",
+    "print(\"=\" * 35)\n",
     "print(\"if (condición): - SI se cumple la condición\")\n",
     "print(\"    # hacer algo - ENTONCES ejecutar esta acción\")\n",
     "print(\"elif (otra_condición): - SINO SI se cumple otra condición\")\n",
@@ -636,17 +640,17 @@
     "# ¿CÓMO ORGANIZAMOS MÚLTIPLES JUGADORES DE MANERA INTELIGENTE?\n",
     "\n",
     "print(\"CREANDO NUESTRO PRIMER 'PLANTEL DIGITAL'\")\n",
-    "print(\"=\"*45)\n",
+    "print(\"=\" * 45)\n",
     "\n",
-    "# ¿Cómo almacenaríamos una lista de convocados? \n",
+    "# ¿Cómo almacenaríamos una lista de convocados?\n",
     "# Pregunta: ¿Qué es más eficiente: 11 variables separadas o una lista?\n",
     "\n",
     "jugadores_convocados = [\n",
     "    \"Lionel Messi\",\n",
-    "    \"Cristiano Ronaldo\", \n",
+    "    \"Cristiano Ronaldo\",\n",
     "    \"Kylian Mbappé\",\n",
     "    \"Erling Haaland\",\n",
-    "    \"Vinicius Jr\"\n",
+    "    \"Vinicius Jr\",\n",
     "]\n",
     "\n",
     "print(\"LISTA DE CONVOCADOS:\")\n",
@@ -660,22 +664,22 @@
     "\n",
     "# ¿Cómo accedemos a un jugador específico?\n",
     "primer_jugador = jugadores_convocados[0]  # ¿Por qué empezamos en 0?\n",
-    "ultimo_jugador = jugadores_convocados[-1] # ¿Qué significa el -1?\n",
+    "ultimo_jugador = jugadores_convocados[-1]  # ¿Qué significa el -1?\n",
     "\n",
     "print(f\"Primer convocado: {primer_jugador}\")\n",
     "print(f\"Último convocado: {ultimo_jugador}\")\n",
     "\n",
     "print(\"\\nPreguntas sobre listas:\")\n",
-    "print(\"=\"*25)\n",
+    "print(\"=\" * 25)\n",
     "print(\"1. ¿Por qué los índices empiezan en 0 y no en 1?\")\n",
     "print(\"2. ¿Qué ventajas tiene usar listas vs variables separadas?\")\n",
     "print(\"3. ¿Cómo agregarías un jugador más a la lista?\")\n",
     "print(\"4. ¿Qué pasa si intentas acceder a la posición 10?\")\n",
     "\n",
     "# ¿Podemos organizar información más compleja?\n",
-    "print(\"\\n\" + \"=\"*45)\n",
+    "print(\"\\n\" + \"=\" * 45)\n",
     "print(\"ORGANIZANDO ESTADÍSTICAS COMPLETAS DE UN JUGADOR\")\n",
-    "print(\"=\"*45)\n",
+    "print(\"=\" * 45)\n",
     "\n",
     "# ¿Cómo relacionamos diferentes tipos de datos de un mismo jugador?\n",
     "estadisticas_messi = {\n",
@@ -685,7 +689,7 @@
     "    \"asistencias\": 8,\n",
     "    \"partidos_jugados\": 25,\n",
     "    \"posicion\": \"Extremo Derecho\",\n",
-    "    \"es_capitan\": True\n",
+    "    \"es_capitan\": True,\n",
     "}\n",
     "\n",
     "print(\"FICHA COMPLETA DEL JUGADOR:\")\n",
@@ -704,7 +708,7 @@
     "    print(\"No es capitán\")\n",
     "\n",
     "print(\"\\nDIFERENCIAS CLAVE:\")\n",
-    "print(\"=\"*20)\n",
+    "print(\"=\" * 20)\n",
     "print(\"LISTAS [] - Para elementos del mismo tipo\")\n",
     "print(\"   Ejemplo: lista de nombres, lista de goles\")\n",
     "print(\"DICCIONARIOS {} - Para información relacionada\")\n",
@@ -791,7 +795,7 @@
     "print(\"Equipo:\", nombre_equipo)\n",
     "print(\"Partidos jugados:\", partidos_jugados)\n",
     "print(\"Victorias:\", victorias)\n",
-    "print(\"Empates:\", empates)  \n",
+    "print(\"Empates:\", empates)\n",
     "print(\"Derrotas:\", derrotas)\n",
     "print()\n",
     "print(\"ESTADÍSTICAS CALCULADAS:\")\n",
@@ -859,7 +863,7 @@
     "# PROYECTO FINAL: ¿CÓMO CREARÍAMOS UN SISTEMA COMPLETO DE GESTIÓN?\n",
     "\n",
     "print(\"INTEGRANDO TODO LO APRENDIDO\")\n",
-    "print(\"=\"*40)\n",
+    "print(\"=\" * 40)\n",
     "\n",
     "# ¿Podemos combinar listas, diccionarios y decisiones automáticas?\n",
     "# ¡Vamos a crear un mini-sistema de gestión deportiva!\n",
@@ -869,7 +873,7 @@
     "    {\"nombre\": \"Lionel Messi\", \"goles\": 10, \"edad\": 37, \"posicion\": \"Extremo\"},\n",
     "    {\"nombre\": \"Cristiano Ronaldo\", \"goles\": 12, \"edad\": 39, \"posicion\": \"Delantero\"},\n",
     "    {\"nombre\": \"Kylian Mbappé\", \"goles\": 15, \"edad\": 25, \"posicion\": \"Extremo\"},\n",
-    "    {\"nombre\": \"Erling Haaland\", \"goles\": 18, \"edad\": 24, \"posicion\": \"Delantero\"}\n",
+    "    {\"nombre\": \"Erling Haaland\", \"goles\": 18, \"edad\": 24, \"posicion\": \"Delantero\"},\n",
     "]\n",
     "\n",
     "print(\"ANÁLISIS AUTOMÁTICO DE LA PLANTILLA\")\n",
@@ -880,7 +884,7 @@
     "    nombre = jugador[\"nombre\"]\n",
     "    goles = jugador[\"goles\"]\n",
     "    edad = jugador[\"edad\"]\n",
-    "    \n",
+    "\n",
     "    # Sistema automático de clasificación\n",
     "    if goles >= 15:\n",
     "        categoria = \"ESTRELLA GOLEADORA\"\n",
@@ -888,13 +892,13 @@
     "        categoria = \"GOLEADOR REGULAR\"\n",
     "    else:\n",
     "        categoria = \"EN DESARROLLO\"\n",
-    "    \n",
+    "\n",
     "    # ¿Es un jugador joven con potencial?\n",
     "    if edad < 26:\n",
     "        potencial = \" (GRAN POTENCIAL)\"\n",
     "    else:\n",
     "        potencial = \" (VETERANO EXPERTO)\"\n",
-    "    \n",
+    "\n",
     "    print(f\"{nombre}: {goles} goles - {categoria}{potencial}\")\n",
     "\n",
     "# ¿Cuál es el promedio de goles del equipo?\n",
@@ -912,9 +916,9 @@
     "        print(f\"- {jugador['nombre']}: {jugador['goles']} goles\")\n",
     "\n",
     "print(\"\\nRESUMEN DE CAPACIDADES DESARROLLADAS:\")\n",
-    "print(\"=\"*45)\n",
+    "print(\"=\" * 45)\n",
     "print(\"- Variables: Guardar información individual\")\n",
-    "print(\"- Operaciones: Realizar cálculos deportivos\")  \n",
+    "print(\"- Operaciones: Realizar cálculos deportivos\")\n",
     "print(\"- Comparaciones: Evaluar rendimientos\")\n",
     "print(\"- Condicionales: Tomar decisiones automáticas\")\n",
     "print(\"- Listas: Organizar múltiples elementos\")\n",
