--- a/contenido/bloque-1/semana-5/visualizacion-basica.ipynb
+++ b/contenido/bloque-1/semana-5/visualizacion-basica.ipynb
@@ -136,12 +136,12 @@
    ],
    "source": [
     "# BARRAS: comparación simple (Sesión 1)\n",
-    "equipos_basicos = ['Barcelona', 'Real Madrid', 'Valencia']\n",
+    "equipos_basicos = [\"Barcelona\", \"Real Madrid\", \"Valencia\"]\n",
     "goles_basicos = [25, 20, 15]\n",
     "\n",
     "sns.barplot(x=equipos_basicos, y=goles_basicos)\n",
-    "plt.title('Goles por Equipo (Comparación)')\n",
-    "plt.ylabel('Goles')\n",
+    "plt.title(\"Goles por Equipo (Comparación)\")\n",
+    "plt.ylabel(\"Goles\")\n",
     "plt.show()\n",
     "\n",
     "print(\"Reflexión: ¿Qué ves en 1 segundo que tardarías más leyendo números?\")"
@@ -190,23 +190,34 @@
     "plt.figure(figsize=(12, 7))\n",
     "\n",
     "# Creando líneas para cada equipo\n",
-    "plt.plot(jornadas, real_madrid, marker='o', linewidth=2.5, label='Real Madrid', color='purple')\n",
-    "plt.plot(jornadas, barcelona, marker='s', linewidth=2.5, label='Barcelona', color='blue')\n",
-    "plt.plot(jornadas, atletico, marker='^', linewidth=2.5, label='Atletico Madrid', color='red')\n",
+    "plt.plot(\n",
+    "    jornadas,\n",
+    "    real_madrid,\n",
+    "    marker=\"o\",\n",
+    "    linewidth=2.5,\n",
+    "    label=\"Real Madrid\",\n",
+    "    color=\"purple\",\n",
+    ")\n",
+    "plt.plot(\n",
+    "    jornadas, barcelona, marker=\"s\", linewidth=2.5, label=\"Barcelona\", color=\"blue\"\n",
+    ")\n",
+    "plt.plot(\n",
+    "    jornadas, atletico, marker=\"^\", linewidth=2.5, label=\"Atletico Madrid\", color=\"red\"\n",
+    ")\n",
     "\n",
     "# Personalizando el gráfico\n",
-    "plt.title('Evolución de Puntos por Jornada - La Liga', fontsize=16, fontweight='bold')\n",
-    "plt.xlabel('Jornada', fontsize=12)\n",
-    "plt.ylabel('Puntos Acumulados', fontsize=12)\n",
+    "plt.title(\"Evolución de Puntos por Jornada - La Liga\", fontsize=16, fontweight=\"bold\")\n",
+    "plt.xlabel(\"Jornada\", fontsize=12)\n",
+    "plt.ylabel(\"Puntos Acumulados\", fontsize=12)\n",
     "\n",
     "# Añadiendo cuadrícula para mejor lectura\n",
-    "plt.grid(True, alpha=0.3, linestyle='--')\n",
+    "plt.grid(True, alpha=0.3, linestyle=\"--\")\n",
     "\n",
     "# Leyenda para identificar equipos\n",
     "plt.legend(fontsize=11)\n",
     "\n",
     "# Resaltando la posición actual\n",
-    "plt.axhline(y=40, color='gold', linestyle=':', alpha=0.7, label='Línea de Liderato')\n",
+    "plt.axhline(y=40, color=\"gold\", linestyle=\":\", alpha=0.7, label=\"Línea de Liderato\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
@@ -263,7 +274,7 @@
     "# ===============================\n",
     "\n",
     "# Datos de equipos de La Liga (simulados pero realistas)\n",
-    "equipos = ['Real Madrid', 'Barcelona', 'Atletico', 'Sevilla', 'Valencia']\n",
+    "equipos = [\"Real Madrid\", \"Barcelona\", \"Atletico\", \"Sevilla\", \"Valencia\"]\n",
     "\n",
     "goles_favor = [68, 70, 55, 48, 42]\n",
     "puntos_obtenidos = [78, 76, 66, 58, 53]\n",
@@ -271,17 +282,29 @@
     "plt.figure(figsize=(8, 6))\n",
     "\n",
     "# Gráfico de dispersión simple\n",
-    "plt.scatter(goles_favor, puntos_obtenidos, s=120, alpha=0.7, color='steelblue', edgecolors='black')\n",
+    "plt.scatter(\n",
+    "    goles_favor,\n",
+    "    puntos_obtenidos,\n",
+    "    s=120,\n",
+    "    alpha=0.7,\n",
+    "    color=\"steelblue\",\n",
+    "    edgecolors=\"black\",\n",
+    ")\n",
     "\n",
     "# Etiquetar solo equipos destacados (menos carga visual)\n",
     "for i, equipo in enumerate(equipos):\n",
-    "    plt.annotate(equipo, (goles_favor[i], puntos_obtenidos[i]),\n",
-    "                 xytext=(5, 5), textcoords='offset points', fontsize=9)\n",
+    "    plt.annotate(\n",
+    "        equipo,\n",
+    "        (goles_favor[i], puntos_obtenidos[i]),\n",
+    "        xytext=(5, 5),\n",
+    "        textcoords=\"offset points\",\n",
+    "        fontsize=9,\n",
+    "    )\n",
     "\n",
-    "plt.title('Relación Goles Anotados vs Puntos Obtenidos')\n",
-    "plt.xlabel('Goles Anotados')\n",
-    "plt.ylabel('Puntos Obtenidos')\n",
-    "plt.grid(alpha=0.3, linestyle='--')\n",
+    "plt.title(\"Relación Goles Anotados vs Puntos Obtenidos\")\n",
+    "plt.xlabel(\"Goles Anotados\")\n",
+    "plt.ylabel(\"Puntos Obtenidos\")\n",
+    "plt.grid(alpha=0.3, linestyle=\"--\")\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
@@ -343,41 +366,41 @@
     "# ===============================\n",
     "\n",
     "# Datos simples\n",
-    "equipos = ['Real Madrid', 'Barcelona', 'Atletico', 'Sevilla', 'Valencia']\n",
+    "equipos = [\"Real Madrid\", \"Barcelona\", \"Atletico\", \"Sevilla\", \"Valencia\"]\n",
     "goles_favor = [68, 70, 55, 48, 42]\n",
     "goles_contra = [32, 35, 40, 45, 50]\n",
     "puntos = [78, 76, 66, 58, 53]\n",
     "posesion = [58, 64, 52, 55, 49]\n",
     "\n",
     "fig, axes = plt.subplots(2, 2, figsize=(12, 9))\n",
-    "fig.suptitle('Panel Básico de Rendimiento (2x2)', fontsize=16, fontweight='bold')\n",
+    "fig.suptitle(\"Panel Básico de Rendimiento (2x2)\", fontsize=16, fontweight=\"bold\")\n",
     "\n",
     "# 1. Barras: Goles a Favor\n",
-    "axes[0,0].bar(equipos, goles_favor, color='skyblue')\n",
-    "axes[0,0].set_title('Goles a Favor')\n",
-    "axes[0,0].set_ylabel('Goles')\n",
-    "axes[0,0].tick_params(axis='x', rotation=45)\n",
+    "axes[0, 0].bar(equipos, goles_favor, color=\"skyblue\")\n",
+    "axes[0, 0].set_title(\"Goles a Favor\")\n",
+    "axes[0, 0].set_ylabel(\"Goles\")\n",
+    "axes[0, 0].tick_params(axis=\"x\", rotation=45)\n",
     "\n",
     "# 2. Barras: Goles en Contra\n",
-    "axes[0,1].bar(equipos, goles_contra, color='salmon')\n",
-    "axes[0,1].set_title('Goles en Contra')\n",
-    "axes[0,1].tick_params(axis='x', rotation=45)\n",
+    "axes[0, 1].bar(equipos, goles_contra, color=\"salmon\")\n",
+    "axes[0, 1].set_title(\"Goles en Contra\")\n",
+    "axes[0, 1].tick_params(axis=\"x\", rotation=45)\n",
     "\n",
     "# 3. Línea: Evolución simple (simulada)\n",
     "jornadas = list(range(1, 11))\n",
     "barcelona = [3, 6, 9, 12, 15, 18, 20, 22, 25, 27]\n",
-    "axes[1,0].plot(jornadas, barcelona, marker='o', color='navy')\n",
-    "axes[1,0].set_title('Puntos Barcelona (10 Jornadas)')\n",
-    "axes[1,0].set_xlabel('Jornada')\n",
-    "axes[1,0].set_ylabel('Puntos')\n",
-    "axes[1,0].grid(alpha=0.3)\n",
+    "axes[1, 0].plot(jornadas, barcelona, marker=\"o\", color=\"navy\")\n",
+    "axes[1, 0].set_title(\"Puntos Barcelona (10 Jornadas)\")\n",
+    "axes[1, 0].set_xlabel(\"Jornada\")\n",
+    "axes[1, 0].set_ylabel(\"Puntos\")\n",
+    "axes[1, 0].grid(alpha=0.3)\n",
     "\n",
     "# 4. Dispersión: Posesión vs Puntos (simple)\n",
-    "axes[1,1].scatter(posesion, puntos, color='green', s=100, edgecolors='black')\n",
-    "axes[1,1].set_title('Posesión vs Puntos')\n",
-    "axes[1,1].set_xlabel('Posesión (%)')\n",
-    "axes[1,1].set_ylabel('Puntos')\n",
-    "axes[1,1].grid(alpha=0.3)\n",
+    "axes[1, 1].scatter(posesion, puntos, color=\"green\", s=100, edgecolors=\"black\")\n",
+    "axes[1, 1].set_title(\"Posesión vs Puntos\")\n",
+    "axes[1, 1].set_xlabel(\"Posesión (%)\")\n",
+    "axes[1, 1].set_ylabel(\"Puntos\")\n",
+    "axes[1, 1].grid(alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
@@ -436,19 +459,19 @@
     "# PERSONALIZACIÓN BÁSICA (Colores y Etiquetas)\n",
     "# ===============================\n",
     "\n",
-    "plt.style.use('default')  # Estilo simple\n",
+    "plt.style.use(\"default\")  # Estilo simple\n",
     "\n",
-    "jugadores = ['Messi', 'Mbappé', 'Haaland', 'Benzema', 'Lewandowski']\n",
+    "jugadores = [\"Messi\", \"Mbappé\", \"Haaland\", \"Benzema\", \"Lewandowski\"]\n",
     "goles = [30, 29, 36, 24, 33]\n",
     "\n",
-    "plt.figure(figsize=(8,5))\n",
-    "plt.bar(jugadores, goles, color='steelblue', edgecolor='black')\n",
-    "plt.title('Goles por Jugador (Ejemplo)')\n",
-    "plt.ylabel('Goles')\n",
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.bar(jugadores, goles, color=\"steelblue\", edgecolor=\"black\")\n",
+    "plt.title(\"Goles por Jugador (Ejemplo)\")\n",
+    "plt.ylabel(\"Goles\")\n",
     "plt.xticks(rotation=30)\n",
     "\n",
     "for i, v in enumerate(goles):\n",
-    "    plt.text(i, v+0.5, v, ha='center', fontweight='bold')\n",
+    "    plt.text(i, v + 0.5, v, ha=\"center\", fontweight=\"bold\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
@@ -457,7 +480,9 @@
     "print(\"- Color uniforme sencillo\")\n",
     "print(\"- Etiquetas numéricas sobre barras\")\n",
     "print(\"- Rotación leve para legibilidad\")\n",
-    "print(\"Reflexión: ¿Qué otro cambio simple mejoraría claridad (ordenar, cambiar color, agrupar)?\")"
+    "print(\n",
+    "    \"Reflexión: ¿Qué otro cambio simple mejoraría claridad (ordenar, cambiar color, agrupar)?\"\n",
+    ")"
    ]
   },
   {
@@ -522,25 +547,31 @@
     "# Ejemplo integrado (Sesión 3)\n",
     "# Pregunta: ¿El equipo con más goles también lidera en posesión y puntos?\n",
     "\n",
-    "equipos = ['Real Madrid', 'Barcelona', 'Atletico', 'Sevilla', 'Valencia']\n",
+    "equipos = [\"Real Madrid\", \"Barcelona\", \"Atletico\", \"Sevilla\", \"Valencia\"]\n",
     "goles_favor = [68, 70, 55, 48, 42]\n",
     "posesion = [58, 64, 52, 55, 49]\n",
     "puntos = [78, 76, 66, 58, 53]\n",
     "\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(12,5))\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
     "\n",
     "# Barras: goles\n",
-    "axes[0].bar(equipos, goles_favor, color='steelblue')\n",
-    "axes[0].set_title('Goles a Favor')\n",
-    "axes[0].tick_params(axis='x', rotation=35)\n",
+    "axes[0].bar(equipos, goles_favor, color=\"steelblue\")\n",
+    "axes[0].set_title(\"Goles a Favor\")\n",
+    "axes[0].tick_params(axis=\"x\", rotation=35)\n",
     "\n",
     "# Dispersión: posesión vs puntos\n",
-    "axes[1].scatter(posesion, puntos, s=100, color='darkgreen', edgecolors='black')\n",
+    "axes[1].scatter(posesion, puntos, s=100, color=\"darkgreen\", edgecolors=\"black\")\n",
     "for i, e in enumerate(equipos):\n",
-    "    axes[1].annotate(e, (posesion[i], puntos[i]), xytext=(4,4), textcoords='offset points', fontsize=8)\n",
-    "axes[1].set_title('Posesión vs Puntos')\n",
-    "axes[1].set_xlabel('Posesión (%)')\n",
-    "axes[1].set_ylabel('Puntos')\n",
+    "    axes[1].annotate(\n",
+    "        e,\n",
+    "        (posesion[i], puntos[i]),\n",
+    "        xytext=(4, 4),\n",
+    "        textcoords=\"offset points\",\n",
+    "        fontsize=8,\n",
+    "    )\n",
+    "axes[1].set_title(\"Posesión vs Puntos\")\n",
+    "axes[1].set_xlabel(\"Posesión (%)\")\n",
+    "axes[1].set_ylabel(\"Puntos\")\n",
     "axes[1].grid(alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
@@ -583,14 +614,14 @@
     "# Experimenta y observa la magia:\n",
     "\n",
     "# Nuestros datos: ¿Puedes predecir qué equipo tendrá la barra más alta?\n",
-    "equipos = ['Barcelona', 'Madrid', 'Valencia']\n",
+    "equipos = [\"Barcelona\", \"Madrid\", \"Valencia\"]\n",
     "goles = [25, 20, 15]\n",
     "\n",
     "# La línea mágica: ¿Qué crees que hace sns.barplot()?\n",
     "sns.barplot(x=equipos, y=goles)\n",
     "\n",
     "# ¿Qué diferencia crees que hace agregar un título?\n",
-    "plt.title('Goles por Equipo')\n",
+    "plt.title(\"Goles por Equipo\")\n",
     "\n",
     "# El momento de la revelación:\n",
     "plt.show()\n",
@@ -634,15 +665,15 @@
     "# Observa la narrativa visual que se revela:\n",
     "\n",
     "# Los datos: ¿Puedes predecir si Barcelona está mejorando o empeorando?\n",
-    "meses = ['Enero', 'Febrero', 'Marzo', 'Abril']\n",
+    "meses = [\"Enero\", \"Febrero\", \"Marzo\", \"Abril\"]\n",
     "goles_barcelona = [5, 8, 6, 10]\n",
     "\n",
     "# La magia de las conexiones: ¿Qué historia crees que revelará la línea?\n",
-    "sns.lineplot(x=meses, y=goles_barcelona, marker='o', linewidth=3, markersize=10)\n",
+    "sns.lineplot(x=meses, y=goles_barcelona, marker=\"o\", linewidth=3, markersize=10)\n",
     "\n",
-    "plt.title('Goles de Barcelona por Mes')\n",
-    "plt.xlabel('Mes')\n",
-    "plt.ylabel('Goles')\n",
+    "plt.title(\"Goles de Barcelona por Mes\")\n",
+    "plt.xlabel(\"Mes\")\n",
+    "plt.ylabel(\"Goles\")\n",
     "\n",
     "plt.show()\n",
     "\n",
