--- a/contenido/bloque-2/semana-8/estadistica-descriptiva.ipynb
+++ b/contenido/bloque-2/semana-8/estadistica-descriptiva.ipynb
@@ -119,7 +119,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# ¿Por qué necesitamos cada una de estas herramientas?\n",
     "# pandas -> ¿Para qué crees que sirve cuando tenemos datos de miles de jugadores?\n",
@@ -129,10 +130,12 @@
     "\n",
     "# ¿Qué diferencia esperas ver con esta configuración profesional?\n",
     "sns.set_theme(style=\"whitegrid\", palette=\"Set2\")\n",
-    "plt.rcParams['figure.figsize'] = (10, 6)\n",
+    "plt.rcParams[\"figure.figsize\"] = (10, 6)\n",
     "\n",
     "print(\"¡Laboratorio de estadística descriptiva deportiva activado!\")\n",
-    "print(\"¿Te has preguntado alguna vez cómo los analistas del Real Madrid procesan miles de estadísticas?\")\n",
+    "print(\n",
+    "    \"¿Te has preguntado alguna vez cómo los analistas del Real Madrid procesan miles de estadísticas?\"\n",
+    ")\n",
     "print(\"¡Exactamente con las mismas herramientas que acabamos de cargar!\")\n",
     "print()\n",
     "print(\"pandas: Tu interrogador de grandes volúmenes de datos deportivos\")\n",
@@ -140,7 +143,9 @@
     "print(\"numpy: Tu motor de cálculos matemáticos precisos\")\n",
     "print(\"matplotlib: Tu arquitecto de revelaciones visuales\")\n",
     "print()\n",
-    "print(\"Pregunta de reflexión: ¿Cómo crees que estas herramientas cambiarán tu capacidad de descubrir insights?\")"
+    "print(\n",
+    "    \"Pregunta de reflexión: ¿Cómo crees que estas herramientas cambiarán tu capacidad de descubrir insights?\"\n",
+    ")"
    ]
   },
   {
@@ -209,26 +214,24 @@
     "np.random.seed(42)  # Reproducibilidad: todos obtendremos los mismos resultados\n",
     "\n",
     "print(\"CREANDO NUESTRO DATASET FUTBOLÍSTICO\")\n",
-    "print(\"=\"*50)\n",
+    "print(\"=\" * 50)\n",
     "\n",
     "# ¿Qué tamaño de muestra es representativo para aprender estadística?\n",
     "n_jugadores = 30\n",
     "\n",
     "# ¿Cómo generamos datos que reflejen la realidad del fútbol profesional?\n",
     "datos = {\n",
-    "    'Jugador': [f'Jugador_{i+1}' for i in range(n_jugadores)],\n",
-    "    \n",
+    "    \"Jugador\": [f\"Jugador_{i+1}\" for i in range(n_jugadores)],\n",
     "    # ¿Por qué estas tres posiciones representan bien la diversidad táctica?\n",
-    "    'Posicion': np.random.choice(['Delantero', 'Mediocampista', 'Defensor'], n_jugadores),\n",
-    "    \n",
+    "    \"Posicion\": np.random.choice(\n",
+    "        [\"Delantero\", \"Mediocampista\", \"Defensor\"], n_jugadores\n",
+    "    ),\n",
     "    # ¿El rango 18-35 años captura las diferentes etapas de una carrera?\n",
-    "    'Edad': np.random.randint(18, 35, n_jugadores),\n",
-    "    \n",
+    "    \"Edad\": np.random.randint(18, 35, n_jugadores),\n",
     "    # ¿Por qué 10-38 partidos refleja realidades de temporada diversas?\n",
-    "    'Partidos': np.random.randint(10, 38, n_jugadores),\n",
-    "    \n",
+    "    \"Partidos\": np.random.randint(10, 38, n_jugadores),\n",
     "    # ¿El rango 0-25 goles incluye desde defensores hasta goleadores estrella?\n",
-    "    'Goles': np.random.randint(0, 25, n_jugadores)\n",
+    "    \"Goles\": np.random.randint(0, 25, n_jugadores),\n",
     "}\n",
     "\n",
     "# ¿Qué ventajas tiene organizar estos datos en un DataFrame?\n",
@@ -239,10 +242,12 @@
     "print(df_jugadores.head())\n",
     "\n",
     "print(f\"\\nDistribución por posición:\")\n",
-    "print(df_jugadores['Posicion'].value_counts())\n",
+    "print(df_jugadores[\"Posicion\"].value_counts())\n",
     "\n",
-    "print(\"\\nPregunta de reflexión: ¿Estos datos capturan la variabilidad que esperarías en el fútbol real?\")\n",
-    "print(\"¿Qué patrones estadísticos crees que emergerán de este dataset?\")\n"
+    "print(\n",
+    "    \"\\nPregunta de reflexión: ¿Estos datos capturan la variabilidad que esperarías en el fútbol real?\"\n",
+    ")\n",
+    "print(\"¿Qué patrones estadísticos crees que emergerán de este dataset?\")"
    ]
   },
   {
@@ -317,15 +322,15 @@
     "# Vamos a descubrir qué revelan los números cuando se \"comprimen\" inteligentemente\n",
     "\n",
     "print(\"EXPLORANDO LAS MEDIDAS DE TENDENCIA CENTRAL\")\n",
-    "print(\"=\"*50)\n",
+    "print(\"=\" * 50)\n",
     "\n",
     "# ¿Qué nos dice el \"centro de gravedad\" de nuestros datos?\n",
-    "goles = df_jugadores['Goles']\n",
+    "goles = df_jugadores[\"Goles\"]\n",
     "\n",
     "# Las tres perspectivas fundamentales del rendimiento:\n",
-    "promedio = goles.mean()        # ¿Qué es \"típico\"?\n",
-    "maximo = goles.max()           # ¿Cuál es el límite superior?\n",
-    "minimo = goles.min()           # ¿Cuál es la línea base?\n",
+    "promedio = goles.mean()  # ¿Qué es \"típico\"?\n",
+    "maximo = goles.max()  # ¿Cuál es el límite superior?\n",
+    "minimo = goles.min()  # ¿Cuál es la línea base?\n",
     "\n",
     "print(f\"Rendimiento típico (promedio): {promedio:.1f} goles\")\n",
     "print(f\"Estrella del plantel (máximo): {maximo} goles\")\n",
@@ -335,34 +340,38 @@
     "rango = maximo - minimo\n",
     "print(f\"Amplitud de talento: {rango} goles de diferencia\")\n",
     "\n",
-    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"\\n\" + \"=\" * 50)\n",
     "print(\"ANÁLISIS POR POSICIÓN: ¿Cada especialización tiene su propia historia?\")\n",
-    "print(\"=\"*50)\n",
+    "print(\"=\" * 50)\n",
     "\n",
     "# ¿Las diferentes posiciones revelan patrones de rendimiento distintivos?\n",
-    "for posicion in df_jugadores['Posicion'].unique():\n",
-    "    goles_pos = df_jugadores[df_jugadores['Posicion'] == posicion]['Goles']\n",
+    "for posicion in df_jugadores[\"Posicion\"].unique():\n",
+    "    goles_pos = df_jugadores[df_jugadores[\"Posicion\"] == posicion][\"Goles\"]\n",
     "    promedio_pos = goles_pos.mean()\n",
     "    print(f\"{posicion}: {promedio_pos:.1f} goles promedio\")\n",
     "\n",
-    "print(\"\\nPregunta de reflexión: ¿Los promedios por posición confirman tus expectativas?\")\n",
+    "print(\n",
+    "    \"\\nPregunta de reflexión: ¿Los promedios por posición confirman tus expectativas?\"\n",
+    ")\n",
     "print(\"¿Qué posición muestra el rendimiento más consistente?\")\n",
     "\n",
     "# ¿Cómo visualizamos estas diferencias para que sean más claras?\n",
     "plt.figure(figsize=(10, 6))\n",
-    "sns.boxplot(data=df_jugadores, x='Posicion', y='Goles', palette='Set2')\n",
-    "plt.title('¿Cómo varía el rendimiento ofensivo por especialización táctica?', size=16, pad=20)\n",
-    "plt.ylabel('Goles por Temporada')\n",
-    "plt.xlabel('Posición Táctica')\n",
+    "sns.boxplot(data=df_jugadores, x=\"Posicion\", y=\"Goles\", palette=\"Set2\")\n",
+    "plt.title(\n",
+    "    \"¿Cómo varía el rendimiento ofensivo por especialización táctica?\", size=16, pad=20\n",
+    ")\n",
+    "plt.ylabel(\"Goles por Temporada\")\n",
+    "plt.xlabel(\"Posición Táctica\")\n",
     "plt.show()\n",
     "\n",
     "print(\"\\nPreguntas de análisis:\")\n",
     "print(\"¿Qué posición tiene mayor variabilidad en el rendimiento?\")\n",
     "print(\"¿El promedio general representa bien a todas las posiciones?\")\n",
     "print(\"¿Estos datos cambian tu percepción del valor por posición?\")\n",
-    "plt.title('Distribución de Goles por Especialización Táctica', size=16, pad=20)\n",
-    "plt.ylabel('Número de Goles por Temporada')\n",
-    "plt.xlabel('Posición Táctica')\n",
+    "plt.title(\"Distribución de Goles por Especialización Táctica\", size=16, pad=20)\n",
+    "plt.ylabel(\"Número de Goles por Temporada\")\n",
+    "plt.xlabel(\"Posición Táctica\")\n",
     "plt.show()\n",
     "\n",
     "print(\"\\nReflexión de insights:\")\n",
@@ -441,18 +450,18 @@
     "# Vamos a explorar cómo las visualizaciones revelan patrones ocultos en los números\n",
     "\n",
     "print(\"EXPLORANDO LA DISTRIBUCIÓN VISUAL DE EDADES\")\n",
-    "print(\"=\"*50)\n",
+    "print(\"=\" * 50)\n",
     "\n",
     "# ¿Qué ventajas tiene combinar histograma con curva de densidad?\n",
     "plt.figure(figsize=(12, 6))\n",
-    "sns.histplot(data=df_jugadores, x='Edad', bins=8, kde=True, color='lightblue')\n",
-    "plt.title('¿Cómo se distribuye la experiencia en nuestro plantel?', size=16, pad=20)\n",
-    "plt.xlabel('Edad (años)')\n",
-    "plt.ylabel('Número de Jugadores')\n",
+    "sns.histplot(data=df_jugadores, x=\"Edad\", bins=8, kde=True, color=\"lightblue\")\n",
+    "plt.title(\"¿Cómo se distribuye la experiencia en nuestro plantel?\", size=16, pad=20)\n",
+    "plt.xlabel(\"Edad (años)\")\n",
+    "plt.ylabel(\"Número de Jugadores\")\n",
     "plt.show()\n",
     "\n",
     "# ¿Qué revelan los números demográficos?\n",
-    "edades = df_jugadores['Edad']\n",
+    "edades = df_jugadores[\"Edad\"]\n",
     "promedio_edad = edades.mean()\n",
     "edad_min = edades.min()\n",
     "edad_max = edades.max()\n",
@@ -473,7 +482,9 @@
     "\n",
     "print(f\"→ {interpretacion}\")\n",
     "\n",
-    "print(\"\\nPregunta de reflexión: ¿La forma del histograma te sugiere algo sobre la estrategia del equipo?\")\n",
+    "print(\n",
+    "    \"\\nPregunta de reflexión: ¿La forma del histograma te sugiere algo sobre la estrategia del equipo?\"\n",
+    ")\n",
     "print(\"¿Hay concentraciones etarias que revelen patrones de fichaje?\")\n",
     "print(\"¿Cómo podría esta demografía influir en el rendimiento colectivo?\")\n",
     "\n",
@@ -482,17 +493,19 @@
     "\n",
     "# Gráfico 1: Edad vs Goles - ¿Hay relación entre experiencia y rendimiento?\n",
     "plt.subplot(1, 2, 1)\n",
-    "plt.scatter(df_jugadores['Edad'], df_jugadores['Goles'], alpha=0.6, color='green', s=60)\n",
-    "plt.title('¿La experiencia se traduce en goles?')\n",
-    "plt.xlabel('Edad (años)')\n",
-    "plt.ylabel('Goles por Temporada')\n",
+    "plt.scatter(df_jugadores[\"Edad\"], df_jugadores[\"Goles\"], alpha=0.6, color=\"green\", s=60)\n",
+    "plt.title(\"¿La experiencia se traduce en goles?\")\n",
+    "plt.xlabel(\"Edad (años)\")\n",
+    "plt.ylabel(\"Goles por Temporada\")\n",
     "\n",
     "# Gráfico 2: Partidos vs Goles - ¿Más minutos = más goles?\n",
     "plt.subplot(1, 2, 2)\n",
-    "plt.scatter(df_jugadores['Partidos'], df_jugadores['Goles'], alpha=0.6, color='orange', s=60)\n",
-    "plt.title('¿Más oportunidades generan más goles?')\n",
-    "plt.xlabel('Partidos Jugados')\n",
-    "plt.ylabel('Goles por Temporada')\n",
+    "plt.scatter(\n",
+    "    df_jugadores[\"Partidos\"], df_jugadores[\"Goles\"], alpha=0.6, color=\"orange\", s=60\n",
+    ")\n",
+    "plt.title(\"¿Más oportunidades generan más goles?\")\n",
+    "plt.xlabel(\"Partidos Jugados\")\n",
+    "plt.ylabel(\"Goles por Temporada\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
@@ -547,16 +560,16 @@
     "# Vamos a construir un dashboard estadístico profesional\n",
     "\n",
     "print(\"ANÁLISIS INTEGRADOR: PERFIL COMPLETO DEL PLANTEL\")\n",
-    "print(\"=\"*60)\n",
+    "print(\"=\" * 60)\n",
     "\n",
     "# ¿Cómo creamos un resumen ejecutivo para directivos?\n",
     "print(\"RESUMEN EJECUTIVO DEL PLANTEL\")\n",
     "print(\"-\" * 40)\n",
     "\n",
     "# Estadísticas clave por posición\n",
-    "for posicion in df_jugadores['Posicion'].unique():\n",
-    "    datos_pos = df_jugadores[df_jugadores['Posicion'] == posicion]\n",
-    "    \n",
+    "for posicion in df_jugadores[\"Posicion\"].unique():\n",
+    "    datos_pos = df_jugadores[df_jugadores[\"Posicion\"] == posicion]\n",
+    "\n",
     "    print(f\"\\n{posicion.upper()}:\")\n",
     "    print(f\"  Jugadores: {len(datos_pos)}\")\n",
     "    print(f\"  Goles promedio: {datos_pos['Goles'].mean():.1f}\")\n",
@@ -564,45 +577,55 @@
     "    print(f\"  Partidos promedio: {datos_pos['Partidos'].mean():.1f}\")\n",
     "\n",
     "# ¿Qué métricas de rendimiento son más reveladoras?\n",
-    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
     "print(\"MÉTRICAS DE EFICIENCIA\")\n",
-    "print(\"=\"*60)\n",
+    "print(\"=\" * 60)\n",
     "\n",
     "# Creamos una métrica compuesta: Goles por Partido\n",
-    "df_jugadores['Eficiencia'] = df_jugadores['Goles'] / df_jugadores['Partidos']\n",
+    "df_jugadores[\"Eficiencia\"] = df_jugadores[\"Goles\"] / df_jugadores[\"Partidos\"]\n",
     "\n",
     "# ¿Quiénes son los jugadores más eficientes?\n",
-    "top_eficientes = df_jugadores.nlargest(5, 'Eficiencia')[['Jugador', 'Posicion', 'Eficiencia', 'Goles', 'Partidos']]\n",
+    "top_eficientes = df_jugadores.nlargest(5, \"Eficiencia\")[\n",
+    "    [\"Jugador\", \"Posicion\", \"Eficiencia\", \"Goles\", \"Partidos\"]\n",
+    "]\n",
     "print(\"Top 5 jugadores más eficientes (goles por partido):\")\n",
     "print(top_eficientes)\n",
     "\n",
     "# Visualización integrada: Dashboard profesional\n",
     "fig, axes = plt.subplots(2, 2, figsize=(15, 10))\n",
-    "fig.suptitle('DASHBOARD ESTADÍSTICO PROFESIONAL', fontsize=16, fontweight='bold')\n",
+    "fig.suptitle(\"DASHBOARD ESTADÍSTICO PROFESIONAL\", fontsize=16, fontweight=\"bold\")\n",
     "\n",
     "# Gráfico 1: Distribución de rendimiento por posición\n",
-    "sns.violinplot(data=df_jugadores, x='Posicion', y='Goles', ax=axes[0,0], palette='Set2')\n",
-    "axes[0,0].set_title('Distribución de Goles por Posición')\n",
-    "axes[0,0].tick_params(axis='x', rotation=45)\n",
+    "sns.violinplot(\n",
+    "    data=df_jugadores, x=\"Posicion\", y=\"Goles\", ax=axes[0, 0], palette=\"Set2\"\n",
+    ")\n",
+    "axes[0, 0].set_title(\"Distribución de Goles por Posición\")\n",
+    "axes[0, 0].tick_params(axis=\"x\", rotation=45)\n",
     "\n",
     "# Gráfico 2: Relación Edad-Rendimiento\n",
-    "sns.scatterplot(data=df_jugadores, x='Edad', y='Goles', hue='Posicion', ax=axes[0,1], s=80)\n",
-    "axes[0,1].set_title('Rendimiento vs Experiencia')\n",
+    "sns.scatterplot(\n",
+    "    data=df_jugadores, x=\"Edad\", y=\"Goles\", hue=\"Posicion\", ax=axes[0, 1], s=80\n",
+    ")\n",
+    "axes[0, 1].set_title(\"Rendimiento vs Experiencia\")\n",
     "\n",
     "# Gráfico 3: Eficiencia por posición\n",
-    "sns.boxplot(data=df_jugadores, x='Posicion', y='Eficiencia', ax=axes[1,0], palette='Set3')\n",
-    "axes[1,0].set_title('Eficiencia por Posición')\n",
-    "axes[1,0].tick_params(axis='x', rotation=45)\n",
+    "sns.boxplot(\n",
+    "    data=df_jugadores, x=\"Posicion\", y=\"Eficiencia\", ax=axes[1, 0], palette=\"Set3\"\n",
+    ")\n",
+    "axes[1, 0].set_title(\"Eficiencia por Posición\")\n",
+    "axes[1, 0].tick_params(axis=\"x\", rotation=45)\n",
     "\n",
     "# Gráfico 4: Matriz de correlaciones\n",
-    "correlaciones = df_jugadores[['Edad', 'Partidos', 'Goles', 'Eficiencia']].corr()\n",
-    "sns.heatmap(correlaciones, annot=True, cmap='coolwarm', center=0, ax=axes[1,1])\n",
-    "axes[1,1].set_title('Correlaciones entre Variables')\n",
+    "correlaciones = df_jugadores[[\"Edad\", \"Partidos\", \"Goles\", \"Eficiencia\"]].corr()\n",
+    "sns.heatmap(correlaciones, annot=True, cmap=\"coolwarm\", center=0, ax=axes[1, 1])\n",
+    "axes[1, 1].set_title(\"Correlaciones entre Variables\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "print(\"\\nPregunta de reflexión: ¿Qué insights estratégicos emergen de este análisis integrado?\")\n",
+    "print(\n",
+    "    \"\\nPregunta de reflexión: ¿Qué insights estratégicos emergen de este análisis integrado?\"\n",
+    ")\n",
     "print(\"¿Qué decisiones tomarías basándote en esta evidencia estadística?\")"
    ]
   },
@@ -652,14 +675,14 @@
     "# Vamos a explorar el pensamiento crítico aplicado a nuestros datos\n",
     "\n",
     "print(\"ANÁLISIS CRÍTICO: DETECTANDO LIMITACIONES\")\n",
-    "print(\"=\"*50)\n",
+    "print(\"=\" * 50)\n",
     "\n",
     "# ¿Qué sesgos podríamos tener en nuestro dataset?\n",
     "print(\"Evaluando posibles sesgos en nuestros datos:\")\n",
     "print()\n",
     "\n",
     "# Sesgo 1: ¿Tamaño de muestra por posición?\n",
-    "distribucion_posiciones = df_jugadores['Posicion'].value_counts()\n",
+    "distribucion_posiciones = df_jugadores[\"Posicion\"].value_counts()\n",
     "print(\"Distribución por posición:\")\n",
     "for pos, count in distribucion_posiciones.items():\n",
     "    porcentaje = (count / len(df_jugadores)) * 100\n",
@@ -671,31 +694,35 @@
     "else:\n",
     "    print(\"✓ Distribución relativamente balanceada\")\n",
     "\n",
-    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"\\n\" + \"=\" * 50)\n",
     "print(\"SIMULANDO DECISIÓN DE FICHAJE\")\n",
-    "print(\"=\"*50)\n",
+    "print(\"=\" * 50)\n",
     "\n",
     "# Creamos dos candidatos para evaluación\n",
-    "candidato_x = {'Nombre': 'Jugador X', 'Goles': 15, 'Partidos': 30, 'Edad': 28}\n",
-    "candidato_y = {'Nombre': 'Jugador Y', 'Goles': 12, 'Partidos': 20, 'Edad': 23}\n",
+    "candidato_x = {\"Nombre\": \"Jugador X\", \"Goles\": 15, \"Partidos\": 30, \"Edad\": 28}\n",
+    "candidato_y = {\"Nombre\": \"Jugador Y\", \"Goles\": 12, \"Partidos\": 20, \"Edad\": 23}\n",
     "\n",
     "for candidato in [candidato_x, candidato_y]:\n",
-    "    eficiencia = candidato['Goles'] / candidato['Partidos']\n",
+    "    eficiencia = candidato[\"Goles\"] / candidato[\"Partidos\"]\n",
     "    print(f\"\\n{candidato['Nombre']}:\")\n",
     "    print(f\"  Goles totales: {candidato['Goles']}\")\n",
     "    print(f\"  Eficiencia: {eficiencia:.3f} goles/partido\")\n",
     "    print(f\"  Edad: {candidato['Edad']} años\")\n",
-    "    \n",
-    "    # ¿Cómo se compara con nuestro plantel actual?\n",
-    "    eficiencia_promedio = df_jugadores['Eficiencia'].mean()\n",
-    "    if eficiencia > eficiencia_promedio:\n",
-    "        print(f\"  ✓ Eficiencia superior al promedio del plantel ({eficiencia_promedio:.3f})\")\n",
-    "    else:\n",
-    "        print(f\"  ⚠️ Eficiencia inferior al promedio del plantel ({eficiencia_promedio:.3f})\")\n",
     "\n",
-    "print(\"\\n\" + \"=\"*50)\n",
+    "    # ¿Cómo se compara con nuestro plantel actual?\n",
+    "    eficiencia_promedio = df_jugadores[\"Eficiencia\"].mean()\n",
+    "    if eficiencia > eficiencia_promedio:\n",
+    "        print(\n",
+    "            f\"  ✓ Eficiencia superior al promedio del plantel ({eficiencia_promedio:.3f})\"\n",
+    "        )\n",
+    "    else:\n",
+    "        print(\n",
+    "            f\"  ⚠️ Eficiencia inferior al promedio del plantel ({eficiencia_promedio:.3f})\"\n",
+    "        )\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 50)\n",
     "print(\"PREGUNTAS CRÍTICAS PARA EL ANÁLISIS\")\n",
-    "print(\"=\"*50)\n",
+    "print(\"=\" * 50)\n",
     "\n",
     "print(\"1. ¿Qué información adicional necesitarías para decidir?\")\n",
     "print(\"   - ¿Liga de procedencia? ¿Nivel de competencia?\")\n",
@@ -710,7 +737,9 @@
     "print(\"   - ¿Preferencia por juventud vs experiencia?\")\n",
     "print(\"   - ¿Sobrevaloración de eficiencia en muestras pequeñas?\")\n",
     "\n",
-    "print(\"\\nReflexión final: ¿Cómo balanceas evidencia estadística con intuición futbolística?\")"
+    "print(\n",
+    "    \"\\nReflexión final: ¿Cómo balanceas evidencia estadística con intuición futbolística?\"\n",
+    ")"
    ]
   },
   {
