--- a/contenido/bloque-3/semana-11/modelado-predictivo-introduccion.ipynb
+++ b/contenido/bloque-3/semana-11/modelado-predictivo-introduccion.ipynb
@@ -160,27 +160,29 @@
     "# Datos de partidos anteriores (como el historial de un equipo)\n",
     "partidos_anteriores = []\n",
     "\n",
-    "equipos = ['Barcelona', 'Real Madrid', 'Manchester City', 'Bayern Munich']\n",
+    "equipos = [\"Barcelona\", \"Real Madrid\", \"Manchester City\", \"Bayern Munich\"]\n",
     "\n",
     "# ¿Cómo generamos datos realistas de partidos?\n",
     "for i in range(20):\n",
     "    # Elegimos equipos al azar\n",
     "    equipo_local = random.choice(equipos)\n",
     "    equipo_visitante = random.choice([e for e in equipos if e != equipo_local])\n",
-    "    \n",
+    "\n",
     "    # ¿Quién tiene más probabilidad de ganar?\n",
     "    # Pista: Los equipos locales tienen ventaja\n",
     "    if random.random() > 0.3:  # 70% gana el local\n",
     "        ganador = equipo_local\n",
     "    else:\n",
     "        ganador = equipo_visitante\n",
-    "    \n",
-    "    partidos_anteriores.append({\n",
-    "        'Equipo_Local': equipo_local,\n",
-    "        'Equipo_Visitante': equipo_visitante,\n",
-    "        'Ganador': ganador,\n",
-    "        'Juega_En_Casa': ganador == equipo_local\n",
-    "    })\n",
+    "\n",
+    "    partidos_anteriores.append(\n",
+    "        {\n",
+    "            \"Equipo_Local\": equipo_local,\n",
+    "            \"Equipo_Visitante\": equipo_visitante,\n",
+    "            \"Ganador\": ganador,\n",
+    "            \"Juega_En_Casa\": ganador == equipo_local,\n",
+    "        }\n",
+    "    )\n",
     "\n",
     "# Convertimos a DataFrame (tabla de datos)\n",
     "datos_partidos = pd.DataFrame(partidos_anteriores)\n",
@@ -200,7 +202,7 @@
     "# ¿Cuántas veces gana el equipo local vs el visitante?\n",
     "# Esta información nos ayudará a hacer predicciones\n",
     "\n",
-    "ventaja_local = datos_partidos['Juega_En_Casa'].sum()\n",
+    "ventaja_local = datos_partidos[\"Juega_En_Casa\"].sum()\n",
     "total_partidos = len(datos_partidos)\n",
     "\n",
     "print(f\"De {total_partidos} partidos:\")\n",
@@ -209,7 +211,7 @@
     "print(f\"- Porcentaje de victorias locales: {(ventaja_local/total_partidos)*100:.1f}%\")\n",
     "\n",
     "print(\"\\n¿Qué descubrimos?\")\n",
-    "if ventaja_local > total_partidos/2:\n",
+    "if ventaja_local > total_partidos / 2:\n",
     "    print(\"¡Existe ventaja de jugar en casa!\")\n",
     "else:\n",
     "    print(\"No parece haber ventaja de jugar en casa\")\n",
@@ -285,25 +287,29 @@
     "# ¿Cómo preparamos los datos para que la computadora los entienda?\n",
     "\n",
     "print(\"PASO 1: Preparar los datos\")\n",
-    "print(\"=\"*30)\n",
+    "print(\"=\" * 30)\n",
     "\n",
     "# La computadora no entiende \"Barcelona\" o \"Real Madrid\"\n",
     "# Necesita números. ¿Cómo convertimos texto en números?\n",
     "\n",
     "# Convertimos \"jugar en casa\" a números\n",
-    "datos_partidos['Es_Local'] = datos_partidos['Juega_En_Casa'].astype(int)\n",
+    "datos_partidos[\"Es_Local\"] = datos_partidos[\"Juega_En_Casa\"].astype(int)\n",
     "\n",
     "# 1 = Gana el local, 0 = Gana el visitante\n",
-    "datos_partidos['Gana_Local'] = (datos_partidos['Ganador'] == datos_partidos['Equipo_Local']).astype(int)\n",
+    "datos_partidos[\"Gana_Local\"] = (\n",
+    "    datos_partidos[\"Ganador\"] == datos_partidos[\"Equipo_Local\"]\n",
+    ").astype(int)\n",
     "\n",
     "print(\"Datos preparados:\")\n",
-    "print(datos_partidos[['Es_Local', 'Gana_Local']].head())\n",
+    "print(datos_partidos[[\"Es_Local\", \"Gana_Local\"]].head())\n",
     "\n",
     "print(\"\\n¿Ves cómo convertimos palabras en números?\")\n",
     "print(\"Es_Local: 1=juega en casa, 0=juega fuera\")\n",
     "print(\"Gana_Local: 1=ganó el local, 0=ganó el visitante\")\n",
     "\n",
-    "print(\"\\nPregunta: ¿Por qué crees que la computadora prefiere números en lugar de palabras?\")"
+    "print(\n",
+    "    \"\\nPregunta: ¿Por qué crees que la computadora prefiere números en lugar de palabras?\"\n",
+    ")"
    ]
   },
   {
@@ -317,11 +323,11 @@
     "# Como enseñarle a un niño a reconocer patrones\n",
     "\n",
     "print(\"PASO 2: Entrenando el modelo\")\n",
-    "print(\"=\"*30)\n",
+    "print(\"=\" * 30)\n",
     "\n",
     "# Separamos la información (X) del resultado (y)\n",
-    "X = datos_partidos[['Es_Local']]  # Información que usamos para predecir\n",
-    "y = datos_partidos['Gana_Local']   # Lo que queremos predecir\n",
+    "X = datos_partidos[[\"Es_Local\"]]  # Información que usamos para predecir\n",
+    "y = datos_partidos[\"Gana_Local\"]  # Lo que queremos predecir\n",
     "\n",
     "print(\"Información para predecir (X):\")\n",
     "print(X.head())\n",
@@ -354,7 +360,7 @@
     "# El momento mágico: predecir el futuro\n",
     "\n",
     "print(\"PASO 3: Predicciones\")\n",
-    "print(\"=\"*30)\n",
+    "print(\"=\" * 30)\n",
     "\n",
     "# Situación 1: Barcelona juega en casa contra Real Madrid\n",
     "print(\"SITUACIÓN 1: Barcelona (casa) vs Real Madrid (visitante)\")\n",
@@ -366,7 +372,7 @@
     "else:\n",
     "    print(\"VISITANTE - Predicción: ¡Gana el equipo visitante (Real Madrid)!\")\n",
     "\n",
-    "# Situación 2: Real Madrid juega fuera contra Bayern Munich  \n",
+    "# Situación 2: Real Madrid juega fuera contra Bayern Munich\n",
     "print(\"\\nSITUACIÓN 2: Bayern Munich (casa) vs Real Madrid (visitante)\")\n",
     "situacion_2 = [[1]]  # 1 = Bayern juega en casa\n",
     "prediccion_2 = modelo.predict(situacion_2)\n",
@@ -454,41 +460,45 @@
     "# Creando datos de prueba que el modelo nunca ha visto\n",
     "\n",
     "print(\"EVALUACIÓN DEL MODELO\")\n",
-    "print(\"=\"*30)\n",
+    "print(\"=\" * 30)\n",
     "\n",
     "# Creamos nuevos partidos para probar (que el modelo no conoce)\n",
     "partidos_prueba = []\n",
     "for i in range(10):\n",
     "    equipo_local = random.choice(equipos)\n",
     "    equipo_visitante = random.choice([e for e in equipos if e != equipo_local])\n",
-    "    \n",
+    "\n",
     "    # Simulamos resultados reales\n",
     "    if random.random() > 0.3:  # 70% gana el local (patrón real)\n",
     "        ganador_real = equipo_local\n",
     "    else:\n",
     "        ganador_real = equipo_visitante\n",
-    "    \n",
-    "    partidos_prueba.append({\n",
-    "        'Equipo_Local': equipo_local,\n",
-    "        'Equipo_Visitante': equipo_visitante,\n",
-    "        'Ganador_Real': ganador_real,\n",
-    "        'Es_Local': 1  # Siempre evaluamos al equipo local\n",
-    "    })\n",
+    "\n",
+    "    partidos_prueba.append(\n",
+    "        {\n",
+    "            \"Equipo_Local\": equipo_local,\n",
+    "            \"Equipo_Visitante\": equipo_visitante,\n",
+    "            \"Ganador_Real\": ganador_real,\n",
+    "            \"Es_Local\": 1,  # Siempre evaluamos al equipo local\n",
+    "        }\n",
+    "    )\n",
     "\n",
     "datos_prueba = pd.DataFrame(partidos_prueba)\n",
     "print(\"Partidos de prueba creados:\")\n",
-    "print(datos_prueba[['Equipo_Local', 'Equipo_Visitante', 'Ganador_Real']].head())\n",
+    "print(datos_prueba[[\"Equipo_Local\", \"Equipo_Visitante\", \"Ganador_Real\"]].head())\n",
     "\n",
     "# ¿Qué predice nuestro modelo para estos partidos?\n",
-    "X_prueba = datos_prueba[['Es_Local']]\n",
+    "X_prueba = datos_prueba[[\"Es_Local\"]]\n",
     "predicciones = modelo.predict(X_prueba)\n",
     "\n",
     "# Convertimos las predicciones a nombres de equipos para entenderlas mejor\n",
-    "datos_prueba['Prediccion_Modelo'] = predicciones\n",
-    "datos_prueba['Gana_Local_Real'] = (datos_prueba['Ganador_Real'] == datos_prueba['Equipo_Local']).astype(int)\n",
+    "datos_prueba[\"Prediccion_Modelo\"] = predicciones\n",
+    "datos_prueba[\"Gana_Local_Real\"] = (\n",
+    "    datos_prueba[\"Ganador_Real\"] == datos_prueba[\"Equipo_Local\"]\n",
+    ").astype(int)\n",
     "\n",
     "print(\"\\nResultados vs Predicciones:\")\n",
-    "print(datos_prueba[['Equipo_Local', 'Gana_Local_Real', 'Prediccion_Modelo']].head())"
+    "print(datos_prueba[[\"Equipo_Local\", \"Gana_Local_Real\", \"Prediccion_Modelo\"]].head())"
    ]
   },
   {
@@ -502,10 +512,10 @@
     "# ¿Qué porcentaje de predicciones acertó?\n",
     "\n",
     "print(\"CÁLCULO DE PRECISIÓN\")\n",
-    "print(\"=\"*30)\n",
+    "print(\"=\" * 30)\n",
     "\n",
     "# Comparamos predicciones con resultados reales\n",
-    "aciertos = (datos_prueba['Prediccion_Modelo'] == datos_prueba['Gana_Local_Real']).sum()\n",
+    "aciertos = (datos_prueba[\"Prediccion_Modelo\"] == datos_prueba[\"Gana_Local_Real\"]).sum()\n",
     "total_predicciones = len(datos_prueba)\n",
     "precision = (aciertos / total_predicciones) * 100\n",
     "\n",
