--- a/contenido/bloque-3/semana-12/modelos-avanzados-clasificacion.ipynb
+++ b/contenido/bloque-3/semana-12/modelos-avanzados-clasificacion.ipynb
@@ -108,18 +108,48 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Creamos datos del Barcelona (simulados pero realistas)\n",
     "jugadores_barca = {\n",
-    "    'Jugador': ['Lewandowski', 'Gavi', 'Pedri', 'De Jong', 'Raphinha', \n",
-    "                'Ferran Torres', 'Ansu Fati', 'Balde', 'Araujo', 'Ter Stegen',\n",
-    "                'Christensen', 'Kounde', 'Sergi Roberto', 'Marcos Alonso', 'Pique'],\n",
-    "    'Goles_Temporada': [15, 2, 3, 1, 8, 4, 5, 0, 1, 0, 1, 2, 1, 2, 0],\n",
-    "    'Minutos_Jugados': [2100, 1800, 2000, 1500, 1600, 1200, 900, 1400, 1700, 2200, \n",
-    "                        1300, 1900, 800, 600, 400],\n",
-    "    'Edad': [34, 18, 20, 25, 25, 23, 20, 19, 23, 30, 26, 24, 31, 29, 35],\n",
-    "    'Es_Titular': [1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 0, 0, 0]  # 1=Sí, 0=No\n",
+    "    \"Jugador\": [\n",
+    "        \"Lewandowski\",\n",
+    "        \"Gavi\",\n",
+    "        \"Pedri\",\n",
+    "        \"De Jong\",\n",
+    "        \"Raphinha\",\n",
+    "        \"Ferran Torres\",\n",
+    "        \"Ansu Fati\",\n",
+    "        \"Balde\",\n",
+    "        \"Araujo\",\n",
+    "        \"Ter Stegen\",\n",
+    "        \"Christensen\",\n",
+    "        \"Kounde\",\n",
+    "        \"Sergi Roberto\",\n",
+    "        \"Marcos Alonso\",\n",
+    "        \"Pique\",\n",
+    "    ],\n",
+    "    \"Goles_Temporada\": [15, 2, 3, 1, 8, 4, 5, 0, 1, 0, 1, 2, 1, 2, 0],\n",
+    "    \"Minutos_Jugados\": [\n",
+    "        2100,\n",
+    "        1800,\n",
+    "        2000,\n",
+    "        1500,\n",
+    "        1600,\n",
+    "        1200,\n",
+    "        900,\n",
+    "        1400,\n",
+    "        1700,\n",
+    "        2200,\n",
+    "        1300,\n",
+    "        1900,\n",
+    "        800,\n",
+    "        600,\n",
+    "        400,\n",
+    "    ],\n",
+    "    \"Edad\": [34, 18, 20, 25, 25, 23, 20, 19, 23, 30, 26, 24, 31, 29, 35],\n",
+    "    \"Es_Titular\": [1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 0, 0, 0],  # 1=Sí, 0=No\n",
     "}\n",
     "\n",
     "datos_barca = pd.DataFrame(jugadores_barca)\n",
@@ -208,8 +238,8 @@
     "# X = características que conocemos (goles, minutos, edad)\n",
     "# y = lo que queremos predecir (si es titular)\n",
     "\n",
-    "X = datos_barca[['Goles_Temporada', 'Minutos_Jugados', 'Edad']]\n",
-    "y = datos_barca['Es_Titular']\n",
+    "X = datos_barca[[\"Goles_Temporada\", \"Minutos_Jugados\", \"Edad\"]]\n",
+    "y = datos_barca[\"Es_Titular\"]\n",
     "\n",
     "print(\"Características que usaremos para predecir:\")\n",
     "print(X.head())\n",
@@ -217,7 +247,7 @@
     "print(y.head())\n",
     "\n",
     "# Dividimos los datos en entrenamiento y prueba\n",
-    "# Es como dividir la temporada en partidos pasados (para aprender) \n",
+    "# Es como dividir la temporada en partidos pasados (para aprender)\n",
     "# y partidos futuros (para probar)\n",
     "X_entrenamiento, X_prueba, y_entrenamiento, y_prueba = train_test_split(\n",
     "    X, y, test_size=0.3, random_state=42\n",
@@ -360,21 +390,27 @@
     "predicciones_integral = estratega_integral.predict(X_prueba)\n",
     "\n",
     "# Creamos una tabla para comparar las predicciones\n",
-    "comparacion = pd.DataFrame({\n",
-    "    'Jugador_Prueba': range(1, len(X_prueba) + 1),\n",
-    "    'Especialista_Goles': predicciones_goles,\n",
-    "    'Analista_Experiencia': predicciones_experiencia, \n",
-    "    'Estratega_Integral': predicciones_integral,\n",
-    "    'Realidad': y_prueba.values\n",
-    "})\n",
+    "comparacion = pd.DataFrame(\n",
+    "    {\n",
+    "        \"Jugador_Prueba\": range(1, len(X_prueba) + 1),\n",
+    "        \"Especialista_Goles\": predicciones_goles,\n",
+    "        \"Analista_Experiencia\": predicciones_experiencia,\n",
+    "        \"Estratega_Integral\": predicciones_integral,\n",
+    "        \"Realidad\": y_prueba.values,\n",
+    "    }\n",
+    ")\n",
     "\n",
     "print(\"Comparación de predicciones:\")\n",
     "print(\"(1 = Titular, 0 = Suplente)\")\n",
     "print(comparacion)\n",
     "\n",
     "# ¿En cuántos casos están de acuerdo?\n",
-    "acuerdos = (predicciones_goles == predicciones_experiencia) & (predicciones_experiencia == predicciones_integral)\n",
-    "print(f\"\\nLos tres entrenadores están de acuerdo en {sum(acuerdos)} de {len(acuerdos)} casos\")"
+    "acuerdos = (predicciones_goles == predicciones_experiencia) & (\n",
+    "    predicciones_experiencia == predicciones_integral\n",
+    ")\n",
+    "print(\n",
+    "    f\"\\nLos tres entrenadores están de acuerdo en {sum(acuerdos)} de {len(acuerdos)} casos\"\n",
+    ")"
    ]
   },
   {
@@ -440,20 +476,21 @@
     "    # Si la suma es < 2, significa que la mayoría dijo \"suplente\" (0)\n",
     "    return (votos >= 2).astype(int)\n",
     "\n",
+    "\n",
     "# Aplicamos la votación a nuestras predicciones\n",
     "prediccion_combinada = votacion_simple(\n",
-    "    predicciones_goles, \n",
-    "    predicciones_experiencia, \n",
-    "    predicciones_integral\n",
+    "    predicciones_goles, predicciones_experiencia, predicciones_integral\n",
     ")\n",
     "\n",
     "# Añadimos la decisión combinada a nuestra tabla\n",
-    "comparacion['Decision_Combinada'] = prediccion_combinada\n",
+    "comparacion[\"Decision_Combinada\"] = prediccion_combinada\n",
     "\n",
     "print(\"Tabla completa con decisión combinada:\")\n",
     "print(comparacion)\n",
     "\n",
-    "print(\"\\n¿Qué observas? ¿La decisión combinada es igual a alguno de los modelos individuales?\")"
+    "print(\n",
+    "    \"\\n¿Qué observas? ¿La decisión combinada es igual a alguno de los modelos individuales?\"\n",
+    ")"
    ]
   },
   {
@@ -512,21 +549,35 @@
     "precision_combinada = accuracy_score(y_prueba, prediccion_combinada)\n",
     "\n",
     "# Creamos una tabla de resultados\n",
-    "resultados = pd.DataFrame({\n",
-    "    'Entrenador': ['Especialista en Goles', 'Analista de Experiencia', \n",
-    "                   'Estratega Integral', 'Decisión Combinada'],\n",
-    "    'Precision': [precision_goles, precision_experiencia, \n",
-    "                  precision_integral, precision_combinada],\n",
-    "    'Porcentaje': [f\"{precision_goles*100:.1f}%\", f\"{precision_experiencia*100:.1f}%\",\n",
-    "                   f\"{precision_integral*100:.1f}%\", f\"{precision_combinada*100:.1f}%\"]\n",
-    "})\n",
+    "resultados = pd.DataFrame(\n",
+    "    {\n",
+    "        \"Entrenador\": [\n",
+    "            \"Especialista en Goles\",\n",
+    "            \"Analista de Experiencia\",\n",
+    "            \"Estratega Integral\",\n",
+    "            \"Decisión Combinada\",\n",
+    "        ],\n",
+    "        \"Precision\": [\n",
+    "            precision_goles,\n",
+    "            precision_experiencia,\n",
+    "            precision_integral,\n",
+    "            precision_combinada,\n",
+    "        ],\n",
+    "        \"Porcentaje\": [\n",
+    "            f\"{precision_goles*100:.1f}%\",\n",
+    "            f\"{precision_experiencia*100:.1f}%\",\n",
+    "            f\"{precision_integral*100:.1f}%\",\n",
+    "            f\"{precision_combinada*100:.1f}%\",\n",
+    "        ],\n",
+    "    }\n",
+    ")\n",
     "\n",
     "print(\"Rendimiento de cada entrenador:\")\n",
     "print(resultados)\n",
     "\n",
     "# Encontramos al mejor\n",
-    "mejor_entrenador = resultados.loc[resultados['Precision'].idxmax(), 'Entrenador']\n",
-    "mejor_precision = resultados['Precision'].max()\n",
+    "mejor_entrenador = resultados.loc[resultados[\"Precision\"].idxmax(), \"Entrenador\"]\n",
+    "mejor_precision = resultados[\"Precision\"].max()\n",
     "\n",
     "print(f\"\\n🏆 El mejor entrenador es: {mejor_entrenador}\")\n",
     "print(f\"   Con una precisión de: {mejor_precision*100:.1f}%\")"
