--- a/contenido/bloque-3/semana-13/metricas-avanzadas-evaluacion.ipynb
+++ b/contenido/bloque-3/semana-13/metricas-avanzadas-evaluacion.ipynb
@@ -112,23 +112,73 @@
     "\n",
     "# Datos del análisis: predicciones vs realidad\n",
     "jugadores_barcelona = [\n",
-    "    'Ter Stegen', 'Balde', 'Araujo', 'Kounde', 'Cancelo',\n",
-    "    'De Jong', 'Gavi', 'Pedri', 'Raphinha', 'Lewandowski', 'Ferran Torres',\n",
-    "    'Ansu Fati', 'Sergi Roberto', 'Christensen', 'Marcos Alonso'\n",
+    "    \"Ter Stegen\",\n",
+    "    \"Balde\",\n",
+    "    \"Araujo\",\n",
+    "    \"Kounde\",\n",
+    "    \"Cancelo\",\n",
+    "    \"De Jong\",\n",
+    "    \"Gavi\",\n",
+    "    \"Pedri\",\n",
+    "    \"Raphinha\",\n",
+    "    \"Lewandowski\",\n",
+    "    \"Ferran Torres\",\n",
+    "    \"Ansu Fati\",\n",
+    "    \"Sergi Roberto\",\n",
+    "    \"Christensen\",\n",
+    "    \"Marcos Alonso\",\n",
     "]\n",
     "\n",
     "# 1 = Titular, 0 = Suplente\n",
-    "predicciones_modelo = [1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0]  # Lo que predijo nuestro modelo\n",
-    "realidad_partido = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0]     # Lo que realmente pasó\n",
+    "predicciones_modelo = [\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    0,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "]  # Lo que predijo nuestro modelo\n",
+    "realidad_partido = [\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "]  # Lo que realmente pasó\n",
     "\n",
     "# Creamos una tabla para ver las comparaciones\n",
-    "analisis = pd.DataFrame({\n",
-    "    'Jugador': jugadores_barcelona,\n",
-    "    'Prediccion_Modelo': predicciones_modelo,\n",
-    "    'Realidad_Partido': realidad_partido,\n",
-    "    'Prediccion_Texto': ['Titular' if x == 1 else 'Suplente' for x in predicciones_modelo],\n",
-    "    'Realidad_Texto': ['Titular' if x == 1 else 'Suplente' for x in realidad_partido]\n",
-    "})\n",
+    "analisis = pd.DataFrame(\n",
+    "    {\n",
+    "        \"Jugador\": jugadores_barcelona,\n",
+    "        \"Prediccion_Modelo\": predicciones_modelo,\n",
+    "        \"Realidad_Partido\": realidad_partido,\n",
+    "        \"Prediccion_Texto\": [\n",
+    "            \"Titular\" if x == 1 else \"Suplente\" for x in predicciones_modelo\n",
+    "        ],\n",
+    "        \"Realidad_Texto\": [\n",
+    "            \"Titular\" if x == 1 else \"Suplente\" for x in realidad_partido\n",
+    "        ],\n",
+    "    }\n",
+    ")\n",
     "\n",
     "print(\"Análisis de predicciones del Barcelona:\")\n",
     "print(analisis)\n",
@@ -214,14 +264,20 @@
     "# Vamos a entender qué significa cada número\n",
     "titulares_reales_predecidos_titulares = matriz_confusion[1, 1]  # Aciertos de titulares\n",
     "suplentes_reales_predecidos_suplentes = matriz_confusion[0, 0]  # Aciertos de suplentes\n",
-    "titulares_reales_predecidos_suplentes = matriz_confusion[1, 0]  # Error: era titular, dijimos suplente\n",
-    "suplentes_reales_predecidos_titulares = matriz_confusion[0, 1]  # Error: era suplente, dijimos titular\n",
+    "titulares_reales_predecidos_suplentes = matriz_confusion[\n",
+    "    1, 0\n",
+    "]  # Error: era titular, dijimos suplente\n",
+    "suplentes_reales_predecidos_titulares = matriz_confusion[\n",
+    "    0, 1\n",
+    "]  # Error: era suplente, dijimos titular\n",
     "\n",
     "print(f\"\\n📊 Desglose de resultados:\")\n",
     "print(f\"✅ Titulares correctos: {titulares_reales_predecidos_titulares}\")\n",
     "print(f\"✅ Suplentes correctos: {suplentes_reales_predecidos_suplentes}\")\n",
     "print(f\"❌ Se nos escapó un titular: {titulares_reales_predecidos_suplentes}\")\n",
-    "print(f\"❌ Predijimos titular pero fue suplente: {suplentes_reales_predecidos_titulares}\")\n",
+    "print(\n",
+    "    f\"❌ Predijimos titular pero fue suplente: {suplentes_reales_predecidos_titulares}\"\n",
+    ")\n",
     "\n",
     "# Calculamos la precisión total\n",
     "precision_total = accuracy_score(realidad_partido, predicciones_modelo)\n",
@@ -294,12 +350,18 @@
     "# De los que predijimos como titulares, ¿cuántos realmente lo fueron?\n",
     "predecidos_titulares = sum(predicciones_modelo)\n",
     "titulares_correctos = titulares_reales_predecidos_titulares\n",
-    "efectividad_titulares = titulares_correctos / predecidos_titulares if predecidos_titulares > 0 else 0\n",
+    "efectividad_titulares = (\n",
+    "    titulares_correctos / predecidos_titulares if predecidos_titulares > 0 else 0\n",
+    ")\n",
     "\n",
-    "# 2. Capacidad de detección (Recall en términos técnicos)  \n",
+    "# 2. Capacidad de detección (Recall en términos técnicos)\n",
     "# De los titulares reales, ¿a cuántos logramos identificar?\n",
     "titulares_totales_reales = sum(realidad_partido)\n",
-    "capacidad_deteccion = titulares_correctos / titulares_totales_reales if titulares_totales_reales > 0 else 0\n",
+    "capacidad_deteccion = (\n",
+    "    titulares_correctos / titulares_totales_reales\n",
+    "    if titulares_totales_reales > 0\n",
+    "    else 0\n",
+    ")\n",
     "\n",
     "print(\"📈 Métricas específicas de nuestro modelo:\")\n",
     "print(f\"\\n1. Efectividad con titulares:\")\n",
@@ -395,22 +457,38 @@
     "plt.figure(figsize=(8, 6))\n",
     "\n",
     "# Creamos el mapa de calor\n",
-    "sns.heatmap(matriz_confusion, \n",
-    "            annot=True, \n",
-    "            fmt='d', \n",
-    "            cmap='Blues',\n",
-    "            xticklabels=['Predijo: Suplente', 'Predijo: Titular'],\n",
-    "            yticklabels=['Real: Suplente', 'Real: Titular'])\n",
+    "sns.heatmap(\n",
+    "    matriz_confusion,\n",
+    "    annot=True,\n",
+    "    fmt=\"d\",\n",
+    "    cmap=\"Blues\",\n",
+    "    xticklabels=[\"Predijo: Suplente\", \"Predijo: Titular\"],\n",
+    "    yticklabels=[\"Real: Suplente\", \"Real: Titular\"],\n",
+    ")\n",
     "\n",
-    "plt.title('Matriz de Confusión - Predicciones del Barcelona', size=14, pad=20)\n",
-    "plt.xlabel('Predicciones de nuestro modelo', size=12)\n",
-    "plt.ylabel('Realidad del partido', size=12)\n",
+    "plt.title(\"Matriz de Confusión - Predicciones del Barcelona\", size=14, pad=20)\n",
+    "plt.xlabel(\"Predicciones de nuestro modelo\", size=12)\n",
+    "plt.ylabel(\"Realidad del partido\", size=12)\n",
     "\n",
     "# Añadimos explicaciones en el gráfico\n",
-    "plt.text(0.5, -0.1, '✅ Esquina inferior izquierda y superior derecha = ACIERTOS', \n",
-    "         transform=plt.gca().transAxes, ha='center', size=10, color='green')\n",
-    "plt.text(0.5, -0.15, '❌ Esquina superior izquierda e inferior derecha = ERRORES', \n",
-    "         transform=plt.gca().transAxes, ha='center', size=10, color='red')\n",
+    "plt.text(\n",
+    "    0.5,\n",
+    "    -0.1,\n",
+    "    \"✅ Esquina inferior izquierda y superior derecha = ACIERTOS\",\n",
+    "    transform=plt.gca().transAxes,\n",
+    "    ha=\"center\",\n",
+    "    size=10,\n",
+    "    color=\"green\",\n",
+    ")\n",
+    "plt.text(\n",
+    "    0.5,\n",
+    "    -0.15,\n",
+    "    \"❌ Esquina superior izquierda e inferior derecha = ERRORES\",\n",
+    "    transform=plt.gca().transAxes,\n",
+    "    ha=\"center\",\n",
+    "    size=10,\n",
+    "    color=\"red\",\n",
+    ")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
@@ -487,39 +565,65 @@
     "# Vamos a comparar nuestro modelo con estrategias alternativas\n",
     "\n",
     "# Estrategia 1: Conservadora (solo los más obvios como titulares)\n",
-    "estrategia_conservadora = [1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0]  # Solo 10 titulares\n",
+    "estrategia_conservadora = [\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    0,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    1,\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    "]  # Solo 10 titulares\n",
     "\n",
-    "# Estrategia 2: Arriesgada (la mayoría como titulares)  \n",
-    "estrategia_arriesgada = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0]   # 12 titulares\n",
+    "# Estrategia 2: Arriesgada (la mayoría como titulares)\n",
+    "estrategia_arriesgada = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0]  # 12 titulares\n",
+    "\n",
     "\n",
     "# Calculamos métricas para cada estrategia\n",
     "def calcular_metricas(predicciones, realidad, nombre):\n",
     "    precision = accuracy_score(realidad, predicciones)\n",
     "    matriz = confusion_matrix(realidad, predicciones)\n",
-    "    \n",
+    "\n",
     "    if len(matriz) == 2:  # Verificamos que tengamos ambas clases\n",
     "        tp = matriz[1, 1]  # Titulares correctos\n",
     "        predecidos_como_titulares = sum(predicciones)\n",
     "        titulares_reales = sum(realidad)\n",
-    "        \n",
-    "        efectividad = tp / predecidos_como_titulares if predecidos_como_titulares > 0 else 0\n",
+    "\n",
+    "        efectividad = (\n",
+    "            tp / predecidos_como_titulares if predecidos_como_titulares > 0 else 0\n",
+    "        )\n",
     "        deteccion = tp / titulares_reales if titulares_reales > 0 else 0\n",
     "    else:\n",
     "        efectividad = deteccion = 0\n",
-    "    \n",
+    "\n",
     "    print(f\"\\n🔍 {nombre}:\")\n",
     "    print(f\"   Precisión general: {precision*100:.1f}%\")\n",
     "    print(f\"   Efectividad con titulares: {efectividad*100:.1f}%\")\n",
     "    print(f\"   Capacidad de detección: {deteccion*100:.1f}%\")\n",
-    "    \n",
+    "\n",
     "    return precision, efectividad, deteccion\n",
+    "\n",
     "\n",
     "# Comparamos todas las estrategias\n",
     "print(\"📊 Comparación de estrategias:\")\n",
     "\n",
-    "metricas_original = calcular_metricas(predicciones_modelo, realidad_partido, \"Nuestro Modelo Original\")\n",
-    "metricas_conservadora = calcular_metricas(estrategia_conservadora, realidad_partido, \"Estrategia Conservadora\")\n",
-    "metricas_arriesgada = calcular_metricas(estrategia_arriesgada, realidad_partido, \"Estrategia Arriesgada\")"
+    "metricas_original = calcular_metricas(\n",
+    "    predicciones_modelo, realidad_partido, \"Nuestro Modelo Original\"\n",
+    ")\n",
+    "metricas_conservadora = calcular_metricas(\n",
+    "    estrategia_conservadora, realidad_partido, \"Estrategia Conservadora\"\n",
+    ")\n",
+    "metricas_arriesgada = calcular_metricas(\n",
+    "    estrategia_arriesgada, realidad_partido, \"Estrategia Arriesgada\"\n",
+    ")"
    ]
   },
   {
