--- a/contenido/bloque-3/semana-14/feature-engineering-optimizacion.ipynb
+++ b/contenido/bloque-3/semana-14/feature-engineering-optimizacion.ipynb
@@ -88,13 +88,41 @@
     "\n",
     "# Datos básicos de jugadores del Barcelona (simulados pero realistas)\n",
     "datos_basicos = {\n",
-    "    'Jugador': ['Lewandowski', 'Gavi', 'Pedri', 'De Jong', 'Raphinha', \n",
-    "                'Ferran Torres', 'Ansu Fati', 'Balde', 'Araujo', 'Ter Stegen',\n",
-    "                'Kounde', 'Christensen', 'Sergi Roberto', 'Marcos Alonso'],\n",
-    "    'Goles_Temporada': [23, 4, 6, 2, 12, 8, 7, 1, 2, 0, 3, 1, 2, 3],\n",
-    "    'Partidos_Jugados': [35, 32, 38, 28, 34, 25, 18, 30, 33, 38, 36, 22, 15, 12],\n",
-    "    'Minutos_Totales': [3000, 2400, 3200, 2100, 2800, 1800, 1200, 2200, 2700, 3420, 3100, 1650, 900, 600],\n",
-    "    'Edad': [35, 19, 21, 26, 26, 24, 21, 20, 24, 31, 25, 27, 31, 30]\n",
+    "    \"Jugador\": [\n",
+    "        \"Lewandowski\",\n",
+    "        \"Gavi\",\n",
+    "        \"Pedri\",\n",
+    "        \"De Jong\",\n",
+    "        \"Raphinha\",\n",
+    "        \"Ferran Torres\",\n",
+    "        \"Ansu Fati\",\n",
+    "        \"Balde\",\n",
+    "        \"Araujo\",\n",
+    "        \"Ter Stegen\",\n",
+    "        \"Kounde\",\n",
+    "        \"Christensen\",\n",
+    "        \"Sergi Roberto\",\n",
+    "        \"Marcos Alonso\",\n",
+    "    ],\n",
+    "    \"Goles_Temporada\": [23, 4, 6, 2, 12, 8, 7, 1, 2, 0, 3, 1, 2, 3],\n",
+    "    \"Partidos_Jugados\": [35, 32, 38, 28, 34, 25, 18, 30, 33, 38, 36, 22, 15, 12],\n",
+    "    \"Minutos_Totales\": [\n",
+    "        3000,\n",
+    "        2400,\n",
+    "        3200,\n",
+    "        2100,\n",
+    "        2800,\n",
+    "        1800,\n",
+    "        1200,\n",
+    "        2200,\n",
+    "        2700,\n",
+    "        3420,\n",
+    "        3100,\n",
+    "        1650,\n",
+    "        900,\n",
+    "        600,\n",
+    "    ],\n",
+    "    \"Edad\": [35, 19, 21, 26, 26, 24, 21, 20, 24, 31, 25, 27, 31, 30],\n",
     "}\n",
     "\n",
     "barcelona_datos = pd.DataFrame(datos_basicos)\n",
@@ -424,32 +452,53 @@
     "# Creamos nuevas estadísticas más útiles\n",
     "\n",
     "# 1. Promedio de goles por partido\n",
-    "barcelona_datos['Goles_Por_Partido'] = barcelona_datos['Goles_Temporada'] / barcelona_datos['Partidos_Jugados']\n",
+    "barcelona_datos[\"Goles_Por_Partido\"] = (\n",
+    "    barcelona_datos[\"Goles_Temporada\"] / barcelona_datos[\"Partidos_Jugados\"]\n",
+    ")\n",
     "\n",
     "# 2. Minutos promedio por partido\n",
-    "barcelona_datos['Minutos_Por_Partido'] = barcelona_datos['Minutos_Totales'] / barcelona_datos['Partidos_Jugados']\n",
+    "barcelona_datos[\"Minutos_Por_Partido\"] = (\n",
+    "    barcelona_datos[\"Minutos_Totales\"] / barcelona_datos[\"Partidos_Jugados\"]\n",
+    ")\n",
     "\n",
     "# 3. Eficiencia por cada 90 minutos (un partido completo)\n",
-    "barcelona_datos['Goles_Por_90min'] = (barcelona_datos['Goles_Temporada'] / barcelona_datos['Minutos_Totales']) * 90\n",
+    "barcelona_datos[\"Goles_Por_90min\"] = (\n",
+    "    barcelona_datos[\"Goles_Temporada\"] / barcelona_datos[\"Minutos_Totales\"]\n",
+    ") * 90\n",
+    "\n",
     "\n",
     "# 4. Categoría de experiencia basada en la edad\n",
     "def categorizar_edad(edad):\n",
     "    if edad <= 22:\n",
-    "        return 'Joven'\n",
+    "        return \"Joven\"\n",
     "    elif edad <= 28:\n",
-    "        return 'Experimentado'  \n",
+    "        return \"Experimentado\"\n",
     "    else:\n",
-    "        return 'Veterano'\n",
+    "        return \"Veterano\"\n",
     "\n",
-    "barcelona_datos['Categoria_Experiencia'] = barcelona_datos['Edad'].apply(categorizar_edad)\n",
+    "\n",
+    "barcelona_datos[\"Categoria_Experiencia\"] = barcelona_datos[\"Edad\"].apply(\n",
+    "    categorizar_edad\n",
+    ")\n",
     "\n",
     "# Mostramos las nuevas estadísticas\n",
     "print(\"🎯 Nuevas estadísticas creadas:\")\n",
-    "print(barcelona_datos[['Jugador', 'Goles_Por_Partido', 'Minutos_Por_Partido', \n",
-    "                       'Goles_Por_90min', 'Categoria_Experiencia']].round(2))\n",
+    "print(\n",
+    "    barcelona_datos[\n",
+    "        [\n",
+    "            \"Jugador\",\n",
+    "            \"Goles_Por_Partido\",\n",
+    "            \"Minutos_Por_Partido\",\n",
+    "            \"Goles_Por_90min\",\n",
+    "            \"Categoria_Experiencia\",\n",
+    "        ]\n",
+    "    ].round(2)\n",
+    ")\n",
     "\n",
     "print(\"\\n¿Qué nuevas perspectivas nos dan estas estadísticas?\")\n",
-    "print(\"¿Quién es más eficiente: el que marca más goles totales o el que marca más goles por partido?\")"
+    "print(\n",
+    "    \"¿Quién es más eficiente: el que marca más goles totales o el que marca más goles por partido?\"\n",
+    ")"
    ]
   },
   {
@@ -735,31 +784,39 @@
     "# Analizamos patrones por categoría de experiencia\n",
     "\n",
     "print(\"📊 Análisis por categoría de experiencia:\")\n",
-    "print(\"=\"*50)\n",
+    "print(\"=\" * 50)\n",
     "\n",
-    "for categoria in ['Joven', 'Experimentado', 'Veterano']:\n",
-    "    jugadores_categoria = barcelona_datos[barcelona_datos['Categoria_Experiencia'] == categoria]\n",
-    "    \n",
+    "for categoria in [\"Joven\", \"Experimentado\", \"Veterano\"]:\n",
+    "    jugadores_categoria = barcelona_datos[\n",
+    "        barcelona_datos[\"Categoria_Experiencia\"] == categoria\n",
+    "    ]\n",
+    "\n",
     "    if len(jugadores_categoria) > 0:\n",
-    "        promedio_goles_partido = jugadores_categoria['Goles_Por_Partido'].mean()\n",
-    "        promedio_minutos = jugadores_categoria['Minutos_Por_Partido'].mean()\n",
-    "        promedio_eficiencia = jugadores_categoria['Goles_Por_90min'].mean()\n",
-    "        \n",
+    "        promedio_goles_partido = jugadores_categoria[\"Goles_Por_Partido\"].mean()\n",
+    "        promedio_minutos = jugadores_categoria[\"Minutos_Por_Partido\"].mean()\n",
+    "        promedio_eficiencia = jugadores_categoria[\"Goles_Por_90min\"].mean()\n",
+    "\n",
     "        print(f\"\\n🏷️ Jugadores {categoria}:\")\n",
     "        print(f\"   Cantidad: {len(jugadores_categoria)} jugadores\")\n",
     "        print(f\"   Goles por partido promedio: {promedio_goles_partido:.2f}\")\n",
     "        print(f\"   Minutos por partido promedio: {promedio_minutos:.1f}\")\n",
     "        print(f\"   Eficiencia (goles/90min): {promedio_eficiencia:.2f}\")\n",
-    "        \n",
+    "\n",
     "        print(f\"   Jugadores: {', '.join(jugadores_categoria['Jugador'].tolist())}\")\n",
     "\n",
     "print(\"\\n🤔 Pregunta reflexiva:\")\n",
-    "print(\"¿Qué patrones observas? ¿Los veteranos son más o menos eficientes que los jóvenes?\")\n",
+    "print(\n",
+    "    \"¿Qué patrones observas? ¿Los veteranos son más o menos eficientes que los jóvenes?\"\n",
+    ")\n",
     "\n",
     "# Creamos una nueva estadística: Regularidad de juego\n",
-    "barcelona_datos['Regularidad'] = barcelona_datos['Minutos_Por_Partido'] / 90  # Qué fracción del partido juega\n",
-    "print(f\"\\n📈 Nueva estadística: Regularidad de juego (0=nunca juega, 1=siempre completo)\")\n",
-    "print(barcelona_datos[['Jugador', 'Regularidad', 'Categoria_Experiencia']].round(2))"
+    "barcelona_datos[\"Regularidad\"] = (\n",
+    "    barcelona_datos[\"Minutos_Por_Partido\"] / 90\n",
+    ")  # Qué fracción del partido juega\n",
+    "print(\n",
+    "    f\"\\n📈 Nueva estadística: Regularidad de juego (0=nunca juega, 1=siempre completo)\"\n",
+    ")\n",
+    "print(barcelona_datos[[\"Jugador\", \"Regularidad\", \"Categoria_Experiencia\"]].round(2))"
    ]
   },
   {
@@ -826,33 +883,40 @@
     "\n",
     "# Gráfico 1: Eficiencia por categoría de experiencia\n",
     "plt.subplot(2, 2, 1)\n",
-    "sns.boxplot(data=barcelona_datos, x='Categoria_Experiencia', y='Goles_Por_90min')\n",
-    "plt.title('Eficiencia de Goles por Categoría de Experiencia')\n",
-    "plt.ylabel('Goles cada 90 minutos')\n",
+    "sns.boxplot(data=barcelona_datos, x=\"Categoria_Experiencia\", y=\"Goles_Por_90min\")\n",
+    "plt.title(\"Eficiencia de Goles por Categoría de Experiencia\")\n",
+    "plt.ylabel(\"Goles cada 90 minutos\")\n",
     "plt.xticks(rotation=45)\n",
     "\n",
     "# Gráfico 2: Regularidad vs Goles por partido\n",
     "plt.subplot(2, 2, 2)\n",
-    "plt.scatter(barcelona_datos['Regularidad'], barcelona_datos['Goles_Por_Partido'], \n",
-    "           c=barcelona_datos['Edad'], cmap='viridis', s=100)\n",
-    "plt.xlabel('Regularidad (fracción del partido)')\n",
-    "plt.ylabel('Goles por partido')\n",
-    "plt.title('¿Más tiempo = Más goles?')\n",
-    "plt.colorbar(label='Edad')\n",
+    "plt.scatter(\n",
+    "    barcelona_datos[\"Regularidad\"],\n",
+    "    barcelona_datos[\"Goles_Por_Partido\"],\n",
+    "    c=barcelona_datos[\"Edad\"],\n",
+    "    cmap=\"viridis\",\n",
+    "    s=100,\n",
+    ")\n",
+    "plt.xlabel(\"Regularidad (fracción del partido)\")\n",
+    "plt.ylabel(\"Goles por partido\")\n",
+    "plt.title(\"¿Más tiempo = Más goles?\")\n",
+    "plt.colorbar(label=\"Edad\")\n",
     "\n",
     "# Gráfico 3: Distribución de nuevas estadísticas\n",
     "plt.subplot(2, 2, 3)\n",
-    "barcelona_datos['Goles_Por_Partido'].hist(bins=8, alpha=0.7, color='skyblue')\n",
-    "plt.xlabel('Goles por partido')\n",
-    "plt.ylabel('Cantidad de jugadores')\n",
-    "plt.title('Distribución: Goles por Partido')\n",
+    "barcelona_datos[\"Goles_Por_Partido\"].hist(bins=8, alpha=0.7, color=\"skyblue\")\n",
+    "plt.xlabel(\"Goles por partido\")\n",
+    "plt.ylabel(\"Cantidad de jugadores\")\n",
+    "plt.title(\"Distribución: Goles por Partido\")\n",
     "\n",
     "# Gráfico 4: Comparación por experiencia\n",
     "plt.subplot(2, 2, 4)\n",
-    "categoria_stats = barcelona_datos.groupby('Categoria_Experiencia')['Goles_Por_90min'].mean()\n",
-    "categoria_stats.plot(kind='bar', color=['lightgreen', 'orange', 'lightcoral'])\n",
-    "plt.title('Eficiencia Promedio por Experiencia')\n",
-    "plt.ylabel('Goles por 90 minutos')\n",
+    "categoria_stats = barcelona_datos.groupby(\"Categoria_Experiencia\")[\n",
+    "    \"Goles_Por_90min\"\n",
+    "].mean()\n",
+    "categoria_stats.plot(kind=\"bar\", color=[\"lightgreen\", \"orange\", \"lightcoral\"])\n",
+    "plt.title(\"Eficiencia Promedio por Experiencia\")\n",
+    "plt.ylabel(\"Goles por 90 minutos\")\n",
     "plt.xticks(rotation=45)\n",
     "\n",
     "plt.tight_layout()\n",
@@ -959,14 +1023,20 @@
    "source": [
     "# Creamos una etiqueta para \"titular regular\" basada en regularidad de juego\n",
     "# Un titular regular juega más del 70% del tiempo disponible\n",
-    "barcelona_datos['Es_Titular_Regular'] = (barcelona_datos['Regularidad'] > 0.7).astype(int)\n",
+    "barcelona_datos[\"Es_Titular_Regular\"] = (barcelona_datos[\"Regularidad\"] > 0.7).astype(\n",
+    "    int\n",
+    ")\n",
     "\n",
     "print(\"🎯 Clasificación de jugadores:\")\n",
-    "titulares = barcelona_datos[barcelona_datos['Es_Titular_Regular'] == 1]\n",
-    "suplentes = barcelona_datos[barcelona_datos['Es_Titular_Regular'] == 0]\n",
+    "titulares = barcelona_datos[barcelona_datos[\"Es_Titular_Regular\"] == 1]\n",
+    "suplentes = barcelona_datos[barcelona_datos[\"Es_Titular_Regular\"] == 0]\n",
     "\n",
-    "print(f\"✅ Titulares regulares ({len(titulares)}): {', '.join(titulares['Jugador'].tolist())}\")\n",
-    "print(f\"🔄 Suplentes/Rotación ({len(suplentes)}): {', '.join(suplentes['Jugador'].tolist())}\")\n",
+    "print(\n",
+    "    f\"✅ Titulares regulares ({len(titulares)}): {', '.join(titulares['Jugador'].tolist())}\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"🔄 Suplentes/Rotación ({len(suplentes)}): {', '.join(suplentes['Jugador'].tolist())}\"\n",
+    ")\n",
     "\n",
     "# Preparamos datos para entrenar modelos\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -976,18 +1046,25 @@
     "\n",
     "# Convertimos categorías de experiencia a números para el modelo\n",
     "le = LabelEncoder()\n",
-    "barcelona_datos['Experiencia_Numerica'] = le.fit_transform(barcelona_datos['Categoria_Experiencia'])\n",
+    "barcelona_datos[\"Experiencia_Numerica\"] = le.fit_transform(\n",
+    "    barcelona_datos[\"Categoria_Experiencia\"]\n",
+    ")\n",
     "\n",
     "# Modelo Básico: características originales\n",
-    "caracteristicas_basicas = ['Goles_Temporada', 'Edad', 'Minutos_Totales']\n",
+    "caracteristicas_basicas = [\"Goles_Temporada\", \"Edad\", \"Minutos_Totales\"]\n",
     "X_basico = barcelona_datos[caracteristicas_basicas]\n",
     "\n",
     "# Modelo Mejorado: nuevas estadísticas\n",
-    "caracteristicas_mejoradas = ['Goles_Por_Partido', 'Goles_Por_90min', 'Regularidad', 'Experiencia_Numerica']\n",
+    "caracteristicas_mejoradas = [\n",
+    "    \"Goles_Por_Partido\",\n",
+    "    \"Goles_Por_90min\",\n",
+    "    \"Regularidad\",\n",
+    "    \"Experiencia_Numerica\",\n",
+    "]\n",
     "X_mejorado = barcelona_datos[caracteristicas_mejoradas]\n",
     "\n",
     "# Variable objetivo\n",
-    "y = barcelona_datos['Es_Titular_Regular']\n",
+    "y = barcelona_datos[\"Es_Titular_Regular\"]\n",
     "\n",
     "print(f\"\\n📊 Características del Modelo Básico: {caracteristicas_basicas}\")\n",
     "print(f\"📈 Características del Modelo Mejorado: {caracteristicas_mejoradas}\")\n",
@@ -1088,7 +1165,7 @@
     "predicciones_basicas = modelo_basico.predict(X_basico)\n",
     "precision_basica = accuracy_score(y, predicciones_basicas)\n",
     "\n",
-    "# Modelo Mejorado  \n",
+    "# Modelo Mejorado\n",
     "modelo_mejorado = LogisticRegression(random_state=42)\n",
     "modelo_mejorado.fit(X_mejorado, y)\n",
     "predicciones_mejoradas = modelo_mejorado.predict(X_mejorado)\n",
@@ -1096,7 +1173,7 @@
     "\n",
     "# Comparamos resultados\n",
     "print(\"🏆 Resultados de la comparación:\")\n",
-    "print(\"=\"*40)\n",
+    "print(\"=\" * 40)\n",
     "print(f\"📊 Modelo Básico - Precisión: {precision_basica*100:.1f}%\")\n",
     "print(f\"📈 Modelo Mejorado - Precisión: {precision_mejorada*100:.1f}%\")\n",
     "\n",
@@ -1109,14 +1186,16 @@
     "    print(\"🤝 Ambos modelos tienen la misma precisión\")\n",
     "\n",
     "# Mostramos predicciones lado a lado\n",
-    "comparacion_detallada = pd.DataFrame({\n",
-    "    'Jugador': barcelona_datos['Jugador'],\n",
-    "    'Realidad': y,\n",
-    "    'Prediccion_Basica': predicciones_basicas,\n",
-    "    'Prediccion_Mejorada': predicciones_mejoradas,\n",
-    "    'Acierto_Basico': (y == predicciones_basicas).astype(int),\n",
-    "    'Acierto_Mejorado': (y == predicciones_mejoradas).astype(int)\n",
-    "})\n",
+    "comparacion_detallada = pd.DataFrame(\n",
+    "    {\n",
+    "        \"Jugador\": barcelona_datos[\"Jugador\"],\n",
+    "        \"Realidad\": y,\n",
+    "        \"Prediccion_Basica\": predicciones_basicas,\n",
+    "        \"Prediccion_Mejorada\": predicciones_mejoradas,\n",
+    "        \"Acierto_Basico\": (y == predicciones_basicas).astype(int),\n",
+    "        \"Acierto_Mejorado\": (y == predicciones_mejoradas).astype(int),\n",
+    "    }\n",
+    ")\n",
     "\n",
     "print(f\"\\n📋 Comparación detallada por jugador:\")\n",
     "print(\"(1 = Titular regular, 0 = Suplente/Rotación)\")\n",
