--- a/evaluaciones/bloque-1/solucion-caso-practico/solucion_caso_bloque1.ipynb
+++ b/evaluaciones/bloque-1/solucion-caso-practico/solucion_caso_bloque1.ipynb
@@ -37,8 +37,18 @@
    "outputs": [],
    "source": [
     "# DATOS DE PARTIDOS (listas simples)\n",
-    "resultados_partidos = [\"Victoria\", \"Derrota\", \"Victoria\", \"Empate\", \"Victoria\", \n",
-    "                      \"Derrota\", \"Victoria\", \"Empate\", \"Victoria\", \"Victoria\"]\n",
+    "resultados_partidos = [\n",
+    "    \"Victoria\",\n",
+    "    \"Derrota\",\n",
+    "    \"Victoria\",\n",
+    "    \"Empate\",\n",
+    "    \"Victoria\",\n",
+    "    \"Derrota\",\n",
+    "    \"Victoria\",\n",
+    "    \"Empate\",\n",
+    "    \"Victoria\",\n",
+    "    \"Victoria\",\n",
+    "]\n",
     "\n",
     "goles_favor = [2, 0, 3, 1, 2, 0, 1, 2, 3, 2]\n",
     "goles_contra = [1, 3, 1, 1, 0, 2, 0, 2, 1, 1]\n",
@@ -46,13 +56,13 @@
     "# DATOS DE JUGADORES (diccionario simple)\n",
     "jugadores = {\n",
     "    \"Carlos\": {\"posicion\": \"Delantero\", \"goles\": 8, \"edad\": 23},\n",
-    "    \"María\": {\"posicion\": \"Mediocampo\", \"goles\": 3, \"edad\": 21}, \n",
+    "    \"María\": {\"posicion\": \"Mediocampo\", \"goles\": 3, \"edad\": 21},\n",
     "    \"Luis\": {\"posicion\": \"Defensa\", \"goles\": 1, \"edad\": 25},\n",
     "    \"Ana\": {\"posicion\": \"Delantero\", \"goles\": 6, \"edad\": 22},\n",
     "    \"Pedro\": {\"posicion\": \"Mediocampo\", \"goles\": 2, \"edad\": 24},\n",
     "    \"Sofia\": {\"posicion\": \"Portero\", \"goles\": 0, \"edad\": 20},\n",
     "    \"Diego\": {\"posicion\": \"Defensa\", \"goles\": 0, \"edad\": 26},\n",
-    "    \"Carmen\": {\"posicion\": \"Delantero\", \"goles\": 5, \"edad\": 19}\n",
+    "    \"Carmen\": {\"posicion\": \"Delantero\", \"goles\": 5, \"edad\": 19},\n",
     "}\n",
     "\n",
     "print(\"¡Datos cargados correctamente!\")\n",
@@ -74,7 +84,7 @@
    "source": [
     "# Contar victorias, empates y derrotas usando bucle for\n",
     "victorias = 0\n",
-    "empates = 0  \n",
+    "empates = 0\n",
     "derrotas = 0\n",
     "\n",
     "# Usar bucle for e if para contar cada tipo de resultado\n",
@@ -112,6 +122,7 @@
     "    total_puntos = victorias * 3 + empates * 1\n",
     "    return total_puntos\n",
     "\n",
+    "\n",
     "# Probar la función\n",
     "puntos_totales = calcular_puntos(victorias, empates)\n",
     "print(f\"Puntos totales obtenidos: {puntos_totales}\")\n",
@@ -129,14 +140,15 @@
     "    \"\"\"Encuentra quién marcó más goles\"\"\"\n",
     "    nombre_mejor = \"\"\n",
     "    goles_mejor = 0\n",
-    "    \n",
+    "\n",
     "    # Buscar en todos los jugadores\n",
     "    for nombre, datos in jugadores.items():\n",
     "        if datos[\"goles\"] > goles_mejor:\n",
     "            goles_mejor = datos[\"goles\"]\n",
     "            nombre_mejor = nombre\n",
-    "    \n",
+    "\n",
     "    return nombre_mejor, goles_mejor\n",
+    "\n",
     "\n",
     "# Probar la función\n",
     "mejor_nombre, mejor_goles = mejor_goleador(jugadores)\n",
@@ -186,7 +198,9 @@
     "# Encontrar en qué partido fue\n",
     "for i in range(len(goles_por_partido)):\n",
     "    if goles_por_partido[i] == partido_mas_goles:\n",
-    "        print(f\"Fue el partido #{i+1}: {goles_favor[i]}-{goles_contra[i]} ({resultados_partidos[i]})\")\n",
+    "        print(\n",
+    "            f\"Fue el partido #{i+1}: {goles_favor[i]}-{goles_contra[i]} ({resultados_partidos[i]})\"\n",
+    "        )\n",
     "        break"
    ]
   },
@@ -204,7 +218,7 @@
     "for nombre, datos in jugadores.items():\n",
     "    # Sumar goles de todos los jugadores\n",
     "    total_goles_jugadores += datos[\"goles\"]\n",
-    "    \n",
+    "\n",
     "    # Encontrar el jugador más joven\n",
     "    if datos[\"edad\"] < edad_menor:\n",
     "        edad_menor = datos[\"edad\"]\n",
@@ -317,14 +331,16 @@
     "    goles_jugador = datos[\"goles\"]\n",
     "    total_goles_equipo += goles_jugador\n",
     "    print(f\"{nombre} ({datos['posicion']}): {goles_jugador} goles\")\n",
-    "    \n",
+    "\n",
     "    # Contar goles de delanteros\n",
     "    if datos[\"posicion\"] == \"Delantero\":\n",
     "        goles_por_delanteros += goles_jugador\n",
     "\n",
     "print(f\"\\nTotal de goles del equipo: {total_goles_equipo}\")\n",
     "print(f\"Goles marcados por delanteros: {goles_por_delanteros}\")\n",
-    "print(f\"Porcentaje de goles por delanteros: {(goles_por_delanteros/total_goles_equipo*100):.1f}%\")"
+    "print(\n",
+    "    f\"Porcentaje de goles por delanteros: {(goles_por_delanteros/total_goles_equipo*100):.1f}%\"\n",
+    ")"
    ]
   },
   {
@@ -344,11 +360,15 @@
    "outputs": [],
    "source": [
     "print(\"=== RESUMEN FINAL ===\")\n",
-    "print(f\"📊 Récord del equipo: {victorias} victorias, {empates} empates, {derrotas} derrotas\")\n",
+    "print(\n",
+    "    f\"📊 Récord del equipo: {victorias} victorias, {empates} empates, {derrotas} derrotas\"\n",
+    ")\n",
     "print(f\"⚽ Goles: {total_goles_favor} a favor, {total_goles_contra} en contra\")\n",
     "print(f\"🏆 Puntos obtenidos: {puntos} de {len(resultados_partidos) * 3} posibles\")\n",
     "print(f\"🥇 Mejor goleador: {goleador} ({goles} goles)\")\n",
-    "print(f\"👥 Jugadores por posición: {delanteros} delanteros, {mediocampos} mediocampos, {defensas} defensas, {porteros} porteros\")\n",
+    "print(\n",
+    "    f\"👥 Jugadores por posición: {delanteros} delanteros, {mediocampos} mediocampos, {defensas} defensas, {porteros} porteros\"\n",
+    ")\n",
     "\n",
     "# Evaluación final\n",
     "porcentaje_efectividad = (puntos / (len(resultados_partidos) * 3)) * 100\n",
