--- a/evaluaciones/bloque-2/solucion-caso-practico/scouting_analysis_solucion.ipynb
+++ b/evaluaciones/bloque-2/solucion-caso-practico/scouting_analysis_solucion.ipynb
@@ -12,7 +12,18 @@
    "id": "07dffd79",
    "metadata": {},
    "outputs": [],
-   "source": "# Cargar los datos de jugadores\nprint(\"Cargando datos de jugadores de fútbol...\")\n\n# Dataset simplificado de jugadores\ndatos_jugadores = pd.read_csv('../datasets/jugadores_liga_juvenil.csv')\nprint(f\"Datos cargados: {len(datos_jugadores)} jugadores\")\n\n# Veamos las primeras 5 filas\nprint(\"\\n¡Echemos un vistazo a nuestros datos!\")\nprint(datos_jugadores.head())"
+   "source": [
+    "# Cargar los datos de jugadores\n",
+    "print(\"Cargando datos de jugadores de fútbol...\")\n",
+    "\n",
+    "# Dataset simplificado de jugadores\n",
+    "datos_jugadores = pd.read_csv(\"../datasets/jugadores_liga_juvenil.csv\")\n",
+    "print(f\"Datos cargados: {len(datos_jugadores)} jugadores\")\n",
+    "\n",
+    "# Veamos las primeras 5 filas\n",
+    "print(\"\\n¡Echemos un vistazo a nuestros datos!\")\n",
+    "print(datos_jugadores.head())"
+   ]
   },
   {
    "cell_type": "code",
@@ -20,7 +31,18 @@
    "id": "364605cd",
    "metadata": {},
    "outputs": [],
-   "source": "# Cargar los datos de jugadores\nprint(\"Cargando datos de jugadores de fútbol...\")\n\n# Dataset simplificado de jugadores\ndatos_jugadores = pd.read_csv('../datasets/jugadores_liga_juvenil_simple.csv')\nprint(f\"Datos cargados: {len(datos_jugadores)} jugadores\")\n\n# Veamos las primeras 5 filas\nprint(\"\\n¡Echemos un vistazo a nuestros datos!\")\nprint(datos_jugadores.head())"
+   "source": [
+    "# Cargar los datos de jugadores\n",
+    "print(\"Cargando datos de jugadores de fútbol...\")\n",
+    "\n",
+    "# Dataset simplificado de jugadores\n",
+    "datos_jugadores = pd.read_csv(\"../datasets/jugadores_liga_juvenil_simple.csv\")\n",
+    "print(f\"Datos cargados: {len(datos_jugadores)} jugadores\")\n",
+    "\n",
+    "# Veamos las primeras 5 filas\n",
+    "print(\"\\n¡Echemos un vistazo a nuestros datos!\")\n",
+    "print(datos_jugadores.head())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -34,7 +56,30 @@
    "id": "3203d555",
    "metadata": {},
    "outputs": [],
-   "source": "# Información básica sobre nuestros datos\nprint(\"=== INFORMACIÓN BÁSICA ===\")\nprint(f\"Cantidad de jugadores: {len(datos_jugadores)}\")\nprint(f\"Cantidad de columnas: {len(datos_jugadores.columns)}\")\n\n# Veamos qué columnas tenemos\nprint(\"\\n¿Qué información tenemos de cada jugador?\")\nfor columna in datos_jugadores.columns:\n    print(f\"  • {columna}\")\n\n# Información por posición\nprint(\"\\n¿Cuántos jugadores hay por posición?\")\njugadores_por_posicion = datos_jugadores['posicion'].value_counts()\nprint(jugadores_por_posicion)\n\n# Estadísticas básicas\nprint(\"\\n¿Cuántos goles han marcado en promedio?\")\npromedio_goles = datos_jugadores['goles'].mean()\nprint(f\"Promedio de goles: {promedio_goles:.1f} goles por jugador\")\n\nprint(f\"El que más goles ha marcado: {datos_jugadores['goles'].max()} goles\")\nprint(f\"El que menos goles ha marcado: {datos_jugadores['goles'].min()} goles\")"
+   "source": [
+    "# Información básica sobre nuestros datos\n",
+    "print(\"=== INFORMACIÓN BÁSICA ===\")\n",
+    "print(f\"Cantidad de jugadores: {len(datos_jugadores)}\")\n",
+    "print(f\"Cantidad de columnas: {len(datos_jugadores.columns)}\")\n",
+    "\n",
+    "# Veamos qué columnas tenemos\n",
+    "print(\"\\n¿Qué información tenemos de cada jugador?\")\n",
+    "for columna in datos_jugadores.columns:\n",
+    "    print(f\"  • {columna}\")\n",
+    "\n",
+    "# Información por posición\n",
+    "print(\"\\n¿Cuántos jugadores hay por posición?\")\n",
+    "jugadores_por_posicion = datos_jugadores[\"posicion\"].value_counts()\n",
+    "print(jugadores_por_posicion)\n",
+    "\n",
+    "# Estadísticas básicas\n",
+    "print(\"\\n¿Cuántos goles han marcado en promedio?\")\n",
+    "promedio_goles = datos_jugadores[\"goles\"].mean()\n",
+    "print(f\"Promedio de goles: {promedio_goles:.1f} goles por jugador\")\n",
+    "\n",
+    "print(f\"El que más goles ha marcado: {datos_jugadores['goles'].max()} goles\")\n",
+    "print(f\"El que menos goles ha marcado: {datos_jugadores['goles'].min()} goles\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -42,7 +87,22 @@
    "id": "3d99cebe",
    "metadata": {},
    "outputs": [],
-   "source": "# Crear nuestros primeros gráficos\nprint(\"¡Vamos a crear gráficos para entender mejor los datos!\")\n\n# Gráfico 1: ¿Cuántos jugadores hay por posición?\nplt.figure(figsize=(10, 6))\nsns.countplot(data=datos_jugadores, x='posicion', hue='posicion', palette='viridis', legend=False)\nplt.title('¿Cuántos jugadores tenemos por posición?', fontsize=14, fontweight='bold')\nplt.xlabel('Posición en el campo')\nplt.ylabel('Cantidad de jugadores')\nplt.show()\n\nprint(\"¡Este gráfico nos muestra que tenemos más delanteros y mediocampistas!\")"
+   "source": [
+    "# Crear nuestros primeros gráficos\n",
+    "print(\"¡Vamos a crear gráficos para entender mejor los datos!\")\n",
+    "\n",
+    "# Gráfico 1: ¿Cuántos jugadores hay por posición?\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.countplot(\n",
+    "    data=datos_jugadores, x=\"posicion\", hue=\"posicion\", palette=\"viridis\", legend=False\n",
+    ")\n",
+    "plt.title(\"¿Cuántos jugadores tenemos por posición?\", fontsize=14, fontweight=\"bold\")\n",
+    "plt.xlabel(\"Posición en el campo\")\n",
+    "plt.ylabel(\"Cantidad de jugadores\")\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"¡Este gráfico nos muestra que tenemos más delanteros y mediocampistas!\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -50,7 +110,26 @@
    "id": "d7eb667c",
    "metadata": {},
    "outputs": [],
-   "source": "# Gráfico 2: ¿Quién marca más goles?\nplt.figure(figsize=(10, 6))\nsns.boxplot(data=datos_jugadores, x='posicion', y='goles', hue='posicion', palette='viridis', legend=False)\nplt.title('¿Qué posición marca más goles?', fontsize=14, fontweight='bold')\nplt.xlabel('Posición en el campo')\nplt.ylabel('Cantidad de goles')\nplt.show()\n\nprint(\"¡Como era de esperarse, los delanteros marcan más goles que las otras posiciones!\")"
+   "source": [
+    "# Gráfico 2: ¿Quién marca más goles?\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.boxplot(\n",
+    "    data=datos_jugadores,\n",
+    "    x=\"posicion\",\n",
+    "    y=\"goles\",\n",
+    "    hue=\"posicion\",\n",
+    "    palette=\"viridis\",\n",
+    "    legend=False,\n",
+    ")\n",
+    "plt.title(\"¿Qué posición marca más goles?\", fontsize=14, fontweight=\"bold\")\n",
+    "plt.xlabel(\"Posición en el campo\")\n",
+    "plt.ylabel(\"Cantidad de goles\")\n",
+    "plt.show()\n",
+    "\n",
+    "print(\n",
+    "    \"¡Como era de esperarse, los delanteros marcan más goles que las otras posiciones!\"\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -72,7 +151,23 @@
    "id": "9854ec62",
    "metadata": {},
    "outputs": [],
-   "source": "# Gráfico 3: ¿Hay relación entre goles y asistencias?\nplt.figure(figsize=(10, 6))\nsns.scatterplot(data=datos_jugadores, x='goles', y='asistencias', hue='posicion', s=100)\nplt.title('¿Los jugadores que marcan goles también dan asistencias?', fontsize=12, fontweight='bold')\nplt.xlabel('Cantidad de goles')\nplt.ylabel('Cantidad de asistencias')\nplt.show()\n\nprint(\"¡Interesante! Algunos jugadores son buenos en ambas cosas, otros se especializan en una sola.\")"
+   "source": [
+    "# Gráfico 3: ¿Hay relación entre goles y asistencias?\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.scatterplot(data=datos_jugadores, x=\"goles\", y=\"asistencias\", hue=\"posicion\", s=100)\n",
+    "plt.title(\n",
+    "    \"¿Los jugadores que marcan goles también dan asistencias?\",\n",
+    "    fontsize=12,\n",
+    "    fontweight=\"bold\",\n",
+    ")\n",
+    "plt.xlabel(\"Cantidad de goles\")\n",
+    "plt.ylabel(\"Cantidad de asistencias\")\n",
+    "plt.show()\n",
+    "\n",
+    "print(\n",
+    "    \"¡Interesante! Algunos jugadores son buenos en ambas cosas, otros se especializan en una sola.\"\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,7 +181,22 @@
    "id": "b74f7ffa",
    "metadata": {},
    "outputs": [],
-   "source": "# Top 5 goleadores\nprint(\"=== TOP 5 GOLEADORES ===\")\ntop_goleadores = datos_jugadores.nlargest(5, 'goles')\nfor i, (idx, jugador) in enumerate(top_goleadores.iterrows(), 1):\n    print(f\"{i}. {jugador['nombre']} ({jugador['posicion']}) - {jugador['goles']} goles\")\n\nprint(\"\\n=== TOP 5 ASISTENTES ===\")\ntop_asistentes = datos_jugadores.nlargest(5, 'asistencias')\nfor i, (idx, jugador) in enumerate(top_asistentes.iterrows(), 1):\n    print(f\"{i}. {jugador['nombre']} ({jugador['posicion']}) - {jugador['asistencias']} asistencias\")"
+   "source": [
+    "# Top 5 goleadores\n",
+    "print(\"=== TOP 5 GOLEADORES ===\")\n",
+    "top_goleadores = datos_jugadores.nlargest(5, \"goles\")\n",
+    "for i, (idx, jugador) in enumerate(top_goleadores.iterrows(), 1):\n",
+    "    print(\n",
+    "        f\"{i}. {jugador['nombre']} ({jugador['posicion']}) - {jugador['goles']} goles\"\n",
+    "    )\n",
+    "\n",
+    "print(\"\\n=== TOP 5 ASISTENTES ===\")\n",
+    "top_asistentes = datos_jugadores.nlargest(5, \"asistencias\")\n",
+    "for i, (idx, jugador) in enumerate(top_asistentes.iterrows(), 1):\n",
+    "    print(\n",
+    "        f\"{i}. {jugador['nombre']} ({jugador['posicion']}) - {jugador['asistencias']} asistencias\"\n",
+    "    )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,7 +210,37 @@
    "id": "01677881",
    "metadata": {},
    "outputs": [],
-   "source": "# Análisis final: ¿Qué aprendimos?\n\nprint(\"=== RESUMEN DE NUESTROS HALLAZGOS ===\")\n\nprint(\"\\n1. ¿Qué posición marca más goles en promedio?\")\ngoles_por_posicion = datos_jugadores.groupby('posicion')['goles'].mean().sort_values(ascending=False)\nmejor_posicion = goles_por_posicion.index[0]\npromedio_mejor = goles_por_posicion.iloc[0]\nprint(f\"   Respuesta: {mejor_posicion} con {promedio_mejor:.1f} goles en promedio\")\n\nprint(\"\\n2. ¿Cuál es la edad promedio por posición?\")\nedad_por_posicion = datos_jugadores.groupby('posicion')['edad'].mean().round(1)\nfor posicion, edad in edad_por_posicion.items():\n    print(f\"   {posicion}: {edad} años\")\n\nprint(\"\\n3. ¿Hay jugadores que son buenos tanto marcando como asistiendo?\")\nbuenos_ambos = datos_jugadores[(datos_jugadores['goles'] >= 8) & (datos_jugadores['asistencias'] >= 8)]\nif len(buenos_ambos) > 0:\n    print(f\"   Sí, encontramos {len(buenos_ambos)} jugadores:\")\n    for idx, jugador in buenos_ambos.iterrows():\n        print(f\"   - {jugador['nombre']}: {jugador['goles']} goles, {jugador['asistencias']} asistencias\")\nelse:\n    print(\"   No hay jugadores que destaquen mucho en ambas categorías\")"
+   "source": [
+    "# Análisis final: ¿Qué aprendimos?\n",
+    "\n",
+    "print(\"=== RESUMEN DE NUESTROS HALLAZGOS ===\")\n",
+    "\n",
+    "print(\"\\n1. ¿Qué posición marca más goles en promedio?\")\n",
+    "goles_por_posicion = (\n",
+    "    datos_jugadores.groupby(\"posicion\")[\"goles\"].mean().sort_values(ascending=False)\n",
+    ")\n",
+    "mejor_posicion = goles_por_posicion.index[0]\n",
+    "promedio_mejor = goles_por_posicion.iloc[0]\n",
+    "print(f\"   Respuesta: {mejor_posicion} con {promedio_mejor:.1f} goles en promedio\")\n",
+    "\n",
+    "print(\"\\n2. ¿Cuál es la edad promedio por posición?\")\n",
+    "edad_por_posicion = datos_jugadores.groupby(\"posicion\")[\"edad\"].mean().round(1)\n",
+    "for posicion, edad in edad_por_posicion.items():\n",
+    "    print(f\"   {posicion}: {edad} años\")\n",
+    "\n",
+    "print(\"\\n3. ¿Hay jugadores que son buenos tanto marcando como asistiendo?\")\n",
+    "buenos_ambos = datos_jugadores[\n",
+    "    (datos_jugadores[\"goles\"] >= 8) & (datos_jugadores[\"asistencias\"] >= 8)\n",
+    "]\n",
+    "if len(buenos_ambos) > 0:\n",
+    "    print(f\"   Sí, encontramos {len(buenos_ambos)} jugadores:\")\n",
+    "    for idx, jugador in buenos_ambos.iterrows():\n",
+    "        print(\n",
+    "            f\"   - {jugador['nombre']}: {jugador['goles']} goles, {jugador['asistencias']} asistencias\"\n",
+    "        )\n",
+    "else:\n",
+    "    print(\"   No hay jugadores que destaquen mucho en ambas categorías\")"
+   ]
   },
   {
    "cell_type": "markdown",
